Update for Patch v3.12.1 - checksum: 73e4

--- a/mod/thmod/localisation/english/dlc_recommendations_l_english.yml
+++ b/mod/thmod/localisation/english/dlc_recommendations_l_english.yml
@@ -12,7 +12,7 @@
  STAR_SYSTEM_IS_NOT:0 "Star system is NOT §T$STAR_SYSTEM$§!"
  USING_NAME_LIST:0 "Using name list category §Y$CATEGORY$§!"
  NOT_USING_NAME_LIST:0 "NOT using name list category §Y$CATEGORY$§!"
- MEGACORP_TITLE:0 "Megacorp"
+ MEGACORP_TITLE:0 "MegaCorp"
  MEGACORP_LANDINGPAGE_TITLE:1 "Profit on a Galactic Scale"
  MEGACORP_LANDINGPAGE_DESCRIPTION:2 "What other enterprise is so invigorating as the pursuit of profit?\n\nIn this economy-focused expansion, play as a powerful corporate empire, expanding your business across the stars.\n\nCorporate authorities can build Branch Offices on planets in other empires. Establish Branch Offices along with your established Trade Agreements and become an economic powerhouse!\n\nStagnation is the hallmark of a declining industry - continue to flourish by building all-new Megastructures, and taking on new Ascension Perks. Or stay competitive in a cutthroat galaxy as a powerful crime syndicate. After all, it's just business."
  MEGACORP_FEATURES:3 "§EFeatures:§!\n\n- A new empire type that allows you to play as a business-themed empire, focused on making credits.\n\n- Access to the Galactic Slave Market.\n\n- Caravaneer fleets, who roam the galaxy and always have a bargain up their sleeves.\n\n- Ascension Perks that allow you to: convert your planet into one big city; cross-breed; and gain advantages in the competitive market.\n\n- New Megastructures, Advisor Voices and soundtracks."
