--- a/mod/thmod/localisation/english/first_contact_situations_l_english.yml
+++ b/mod/thmod/localisation/english/first_contact_situations_l_english.yml
@@ -64,7 +64,7 @@
  preftl.2020.a:0 "Secrecy is paramount."
  preftl.2020.b:0 "Tell them the truth."
  preftl.2021.name:0 "The Power of Faith"
- preftl.2021.desc:0 "Word continues to spread of the 'demons' at work on [Target.GetName]. Fanatics have descended on our healthcare providers, clamoring for blood. $preftl.2020.name.outro$"
+ preftl.2021.desc:1 "Word continues to spread of the 'demons' at work on [Target.GetName]. Fanatics have descended on our healthcare providers, clamoring for [Root.GetBloodType]. $preftl.2020.name.outro$"
  preftl.2025.name:0 "Messiah Syndrome"
  preftl.2025.desc:0 "On [Target.GetName], a number of so-called messiahs have appeared. With promises of 'divine deliverance', each of these prophets has amassed a substantial following. On top of the ravages of disease, violent clashes between competing sects are increasingly commonplace."
  preftl.2025.a:0 "The path of divine truth is winding."
@@ -231,7 +231,7 @@
  preftl.2170.a:0 "Increase our aid to the rebels."
  preftl.2170.b:0 "We can do more more to aid the pro-unification forces."
  preftl.2175.name:0 "War Crimes"
- preftl.2175.desc:0 "Bloody battles rage on [Target.GetName], where pro-unification and rebel forces continue to tear one another to pieces. In this struggle, no weapon or tactic is off-limit, and atrocities have been committed on both sides."
+ preftl.2175.desc:1 "Battles rage on [Target.GetName], where pro-unification and rebel forces continue to tear one another to pieces. In this struggle, no weapon or tactic is off-limit, and atrocities have been committed on both sides."
  preftl.2175.a:0 "The rebels need our help now more than ever."
  preftl.2175.b:0 "Increase support to the pro-unification forces."
  preftl.2180.name:0 "Fat and Happy"
