--- a/mod/thmod/localisation/english/modifiers_l_english.yml
+++ b/mod/thmod/localisation/english/modifiers_l_english.yml
@@ -138,18 +138,22 @@
  MOD_COUNTRY_RESEARCH_SHARING_MULT: "Research Sharing from Agreements"
  MOD_POP_FERTILITY:0 "การเจริญพันธุ์"
  MOD_POP_HAPPINESS:0 "ความสุข"
- MOD_POP_HAPPINESS_DESC:0 "All Pops within the Empire will have their Happiness adjusted by this value."
+ MOD_POP_HAPPINESS_DESC:1 "All Pops have their Happiness adjusted by this value."
  MOD_BIOLOGICAL_POP_HAPPINESS:0 "ความสุขของประชากรชีวภาพ"
  MOD_BIOLOGICAL_POP_HAPPINESS_DESC:1 "Biological Pops have their Happiness adjusted by this value."
  mod_BIOLOGICAL_pop_happiness:0 "$MOD_BIOLOGICAL_POP_HAPPINESS$"
  mod_BIOLOGICAL_pop_happiness_DESC:0 "$MOD_BIOLOGICAL_POP_HAPPINESS_DESC$"
+ MOD_ROBOT_POP_HAPPINESS: "Mechanical Pop Happiness"
+ MOD_ROBOT_POP_HAPPINESS_DESC: "Mechanical Pops have their Happiness adjusted by this value."
+ mod_ROBOT_pop_happiness: "$MOD_ROBOT_POP_HAPPINESS$"
+ mod_ROBOT_pop_happiness_DESC: "$MOD_ROBOT_POP_HAPPINESS_DESC$"
  MOD_LITHOID_POP_HAPPINESS:1 "ความสุขของประชากร Lithoid"
  MOD_LITHOID_POP_HAPPINESS_DESC:1 "Lithoid Pops have their Happiness adjusted by this value."
  mod_LITHOID_pop_happiness:0 "$MOD_LITHOID_POP_HAPPINESS$"
  mod_LITHOID_pop_happiness_DESC:0 "$MOD_LITHOID_POP_HAPPINESS_DESC$"
  MOD_FACTION_APPROVAL:0 "ความพึงพอใจของกลุ่มการเมือง"
  MOD_POP_RADIATION_HAPPINESS:0 "ความสุขจากรังสี"
- MOD_POP_RADIATION_HAPPINESS_DESC:0 "All Mechanical Pops within the Empire will have their Happiness adjusted by this value."
+ MOD_POP_RADIATION_HAPPINESS_DESC:1 "$MOD_ROBOT_POP_HAPPINESS_DESC$"
  MOD_POP_ENVIRONMENT_TOLERANCE:1 "การอยู่อาศัยได้"
  MOD_POP_SLAVERY_TOLERANCE:0 "Slavery Tolerance"
  MOD_POP_ALIEN_SLAVERY_TOLERANCE:0 "Alien Slavery Tolerance"
@@ -166,7 +170,8 @@
  MOD_POP_ROBOT_BUILD_COST_MULT:0 "ค่าใช้จ่ายในการสร้างหุ่นยนต์"
  mod_planet_pops_robotics_alloys_upkeep_add: "Robot Alloy Upkeep"
  mod_pop_job_trade_mult:0 "£trade_value£ มูลค่าการค้าจาก £job£ งาน"
- mod_pop_lifestyle_trade_mult:0 "£trade_value£ มูลค่าการค้าจากมาตรฐานความเป็นอยู่"
+ mod_pop_lifestyle_trade_value_mult:0 "£trade_value£ มูลค่าการค้าจากมาตรฐานความเป็นอยู่"
+ mod_pop_lifestyle_trade_value_add: "£trade_value£ มูลค่าการค้าจากมาตรฐานความเป็นอยู่"
  mod_pop_job_amenities_mult:0 "£amenities£ ความอยู่ดีกินดีจาก £job£ งาน"
  mod_living_standard_trade_value_rulers_add: "£trade_value£ มูลค่าการค้าจาก $RULERS$"
  mod_living_standard_trade_value_specialists_add: "£trade_value£ มูลค่าการค้าจาก $SPECIALISTS$"
@@ -261,9 +266,11 @@
  MOD_SHIP_ARMOR_MULT:1 "HP เกราะ"
  MOD_SHIP_SHIELD_DAMAGE_MULT:0 "ทำความเสียหายกับโล่พลังงาน"
  MOD_SHIP_SHIELD_PENETRATION_MULT:0 "เจาะโล่พลังงาน"
+ MOD_SHIP_SHIELD_PENETRATION_ADD: "$MOD_SHIP_SHIELD_PENETRATION_MULT$"
  MOD_SHIP_SHIELD_HARDENING_ADD:0 "เสริมความแข็งแกร่งให้โล่พลังงาน"
  MOD_SHIP_ARMOR_DAMAGE_MULT:0 "ทำความเสียหายกับเกราะ"
  MOD_SHIP_ARMOR_PENETRATION_MULT:0 "เจาะเกราะ"
+ MOD_SHIP_ARMOR_PENETRATION_ADD: "$MOD_SHIP_ARMOR_PENETRATION_MULT$"
  MOD_SHIP_ARMOR_HARDENING_ADD:0 "เสริมความแข็งแกร่งให้เกราะ"
  MOD_SHIP_BASE_SPEED_MULT:0 "ความเร็วยานพื้นฐาน"
  MOD_SHIP_SPEED_MULT:0 "ความเร็วต่ำกว่าแสง"
@@ -1088,6 +1095,10 @@
  triggered_opinion_both_machine_intelligence:0 "Fellow Machine Intelligence"
  triggered_dc_opinion_of_servitors:0 "Oppressors"
  triggered_dc_opinion_of_assimilators:0 "$triggered_dc_opinion_of_servitors$"
+ triggered_spiritualist_fe_opinion_of_spiritualist_machine_empires: "$opinion_synthetics_fanatic$"
+ triggered_individual_machine_opinion_of_individual_machine_empires: "Individual Machines"
+ triggered_spiritualist_opinion_of_spiritualists_machine_empires: "$opinion_synthetics_fanatic$"
+ triggered_fanatic_spiritualist_opinion_of_spiritualists_machine_empires: "$opinion_synthetics_fanatic$"
  triggered_opinion_xenophobia:0 "กลัวต่างดาว"
  triggered_opinion_xenophobes:0 "Xenophobic Bigots"
  triggered_opinion_xenophilia:0 "ชื่นชอบชาวต่างดาว"
@@ -1575,7 +1586,7 @@
  mod_FUN_species_trait_points_add:0 "แต้มการปรับเปลี่ยนยีนเห็ดรา"
  mod_PLANT_species_trait_points_add:0 "แต้มการปรับเปลี่ยนยีนสิ่งมีชีวิตประเภทพืช"
  mod_LITHOID_species_trait_points_add:0 "แต้มการปรับเปลี่ยนยีนสิ่งมีชีวิตประเภทหิน"
- mod_ROBOT_species_trait_points_add:0 "แต้มการปรับเปลี่ยนหุ่นยนต์"
+ mod_ROBOT_species_trait_points_add:0 "Mechanical Modification Points"
  mod_MACHINE_species_trait_points_add:0 "แต้มการปรับเปลี่ยนเครื่องจักร"
  mod_BIOLOGICAL_species_trait_points_add:0 "$species_trait_points_add$"
  mod_pc_machine_habitability:0 "การอยู่อาศัยได้ในดาวเครื่องจักร"
@@ -1626,6 +1637,7 @@
  MOD_SHIP_DAMAGE_AGAINST_STARBASES_MULT:1 "ทำความเสียหายกับฐานอวกาศ"
  MOD_DIPLO_ACTION_ACCEPTANCE_ADD:0 "การยอมรับทางการทูต"
  mod_ships_energy_upkeep_mult:0 "£energy£ พลังงานที่ใช้บำรุงรักษายาน"
+ mod_ships_alloys_upkeep_mult: "Ships £alloys£ Alloys Upkeep"
  mod_starbases_energy_upkeep_mult:0 "£energy£ พลังงานที่ใช้บำรุงรักษาฐานอวกาศ"
  MOD_CATAPULT_SPREAD_BASE:0 "เครื่องเหวี่ยงกองยานควอนตัม ความแม่นยำ (พื้นฐาน)"
  MOD_CATAPULT_SPREAD_MULT:0 "เครื่องเหวี่ยงกองยานควอนตัม ความแม่นยำ"
