--- a/mod/thmod/localisation/english/name_lists/name_lists_l_english.yml
+++ b/mod/thmod/localisation/english/name_lists/name_lists_l_english.yml
@@ -588,7 +588,7 @@
  PRE_NECROID_fossil_plural:0 "$NECROID_fossil_plural$"
  PRE_NECROID_remnant:0 "$NECROID_remnant$"
  PRE_NECROID_remnant_plural:0 "$NECROID_remnant_plural$"
- IMPERIAL:0 "Imperial"
+ IMPERIAL:0 "อิมพีเรียล"
  AQUATIC:0 "น้ำ"
  AQUATIC_desc:0 "Species Class has no effect on your Empire, but Aquatic-class Species may consider other Aquatics to be less alien than other Species Classes."
  AQUATIC_plural:0 "น้ำ"
@@ -733,6 +733,12 @@
  PRE_TOX_fossil_plural:0 "$TOX_fossil_plural$"
  PRE_TOX_remnant:0 "$TOX_remnant$"
  PRE_TOX_remnant_plural:0 "$TOX_remnant_plural$"
+ CYBERNETIC:1 "ไซเบอร์เนติก"
+ CYBERNETIC_desc:1 "Species Class has no effect on your Empire, but Cybernetic-class Species may consider other Cybernetics to be less alien than other Species Classes."
+ CYBERNETIC_plural:0 "ไซเบอร์เนติก"
+ SYNTH: "Synthetic"
+ SYNTH_desc:1 "Species Class has no effect on your Empire, but Synthetic-class Species may consider other Synthetics to be less alien than other Species Classes."
+ SYNTH_plural:0 "Synthetics"
  SALVAGER:0 "$MAM$"
  SALVAGER_desc:0 "$MAM_desc$"
  SALVAGER_plural:0 "$MAM_plural$"
