--- a/mod/thmod/localisation/english/paragon_2_l_english.yml
+++ b/mod/thmod/localisation/english/paragon_2_l_english.yml
@@ -93,6 +93,7 @@
  mod_councilor_gestalt_legion_exp_gain:1 "$councilor_gestalt_legion_with_icon$ $exp_gain$"
  mod_councilor_gestalt_regulatory_exp_gain:1 "$councilor_gestalt_regulatory_with_icon$ $exp_gain$"
  mod_councilor_ruler_dictatorial_exp_gain: "$councilor_ruler_dictatorial$ $exp_gain$"
+ mod_councilor_research_exp_gain: "$councilor_research$ Experience Gain"
  MOD_COUNCILOR_SKILL_ADD:0 "สกิลของสมาชิกสภา"
  ADDITIONAL_COUNCILOR_SKILL:0 "§Hสกิลของสมาชิกสภา:§!"
  MOD_RULER_SKILL_ADD: "สกิลผู้ปกครอง (มีประสิทธิภาพ)"
@@ -1285,7 +1286,7 @@
  leader_trait_cyborg:0 "ไซบอร์ก"
  leader_trait_cyborg_desc:0 "This leader has been heavily augmented with cybernetic implants."
  leader_trait_synthetic:1 "Synth"
- leader_trait_synthetic_desc:0 "This synthetic leader is equipped with a large collection of assorted software upgrades."
+ leader_trait_synthetic_desc:0 "This synthetic leader is equipped with a large collection of assorted upgrades."
  leader_trait_psionic:0 "มีญาณทิพย์"
  leader_trait_psionic_desc:1 "This leader possesses powerful psionic abilities."
  leader_trait_chosen:0 "ผู้ถูกเลือก"
@@ -1355,6 +1356,10 @@
  mod_leader_generals_consumer_goods_upkeep_add:0 "$r_consumer_goods$ $UPKEEP$"
  mod_leader_officials_consumer_goods_upkeep_add:0 "$r_consumer_goods$ $UPKEEP$"
  mod_leader_scientists_consumer_goods_upkeep_add:0 "$r_consumer_goods$ $UPKEEP$"
+ mod_leader_admirals_unity_upkeep_add: "$r_unity$ $UPKEEP$"
+ mod_leader_generals_unity_upkeep_add: "$r_unity$ $UPKEEP$"
+ mod_leader_scientists_unity_upkeep_add: "$r_unity$ $UPKEEP$"
+ mod_leader_governors_unity_upkeep_add: "$r_unity$ $UPKEEP$"
  mod_leader_scientists_volatile_motes_produces_add:0 "$mod_country_base_volatile_motes_produces_add$"
  mod_leader_scientists_exotic_gases_produces_add:0 "$mod_country_base_exotic_gases_produces_add$"
  mod_leader_scientists_rare_crystals_produces_add:0 "$mod_country_base_rare_crystals_produces_add$"
@@ -1403,14 +1408,15 @@
  mod_leader_officials_exotic_gases_produces_add:0 "$mod_country_base_exotic_gases_produces_add$"
  mod_leader_officials_sr_living_metal_produces_add:0 "$mod_country_base_sr_living_metal_produces_add$"
  mod_leader_officials_sr_dark_matter_produces_add:0 "$mod_country_base_sr_dark_matter_produces_add$"
+ mod_leader_scientists_nanites_produces_add: "Monthly £nanites£ Nanites"
  planet_districts_farming:0 "$district_farming$"
  planet_districts_mining:0 "$district_mining$"
  planet_districts_generator:0 "$district_generator$"
  mod_country_councilor_physics_research_produces_add:0 "$mod_leader_scientists_physics_research_produces_add$"
  mod_country_councilor_society_research_produces_add:0 "$mod_leader_scientists_society_research_produces_add$"
  mod_country_councilor_engineering_research_produces_add:0 "$mod_leader_scientists_engineering_research_produces_add$"
- mod_planet_priests_society_research_produces_add:0 "£society£ $SOCIETY$ จาก £job_priest£ £job_death_priest£ $job_priest_plural$"
- mod_planet_pop_assemblers_engineering_research_produces_add:0 "£engineering£ $ENGINEERING$ จาก £job_roboticist£ $job_roboticist_plural$"
+ mod_planet_priests_society_research_produces_add:0 "£society£ $society_research$ from [GetPriestIcon] [GetPriest]"
+ mod_planet_pop_assemblers_engineering_research_produces_add:1 "$r_engineering$ from [GetPopAssemblersPlural]"
  paragon_2.2005.name:0 "Uncovered Hidden Resources"
  paragon_2.2005.desc:0 "[Root.Leader.GetTitle] §Y[Root.Leader.GetName]§!'s experience as a §YProspector§! has helped uncover resources hidden on the surface of §Y[From.GetName]§!. We can construct mining stations in orbit to exploit this discovery."
  paragon_2.2010.name:0 "$paragon_2.2005.name$"
@@ -1476,7 +1482,7 @@
  civic_hive_upkeep_twister_desc:1 "The hypermetabolic drones evolved in this colony possess increased autonomy. While decision-making and situation assessment are enhanced, these drones require an increased intake of digestible materials."
  civic_tooltip_hive_upkeep_twister_effects:2 "เปลี่ยนค่าบำรุงรักษาพื้นฐานของผู้นำ §Y1§! $r_unity$ เป็น §Y2§! $r_food$ (หรือ $r_minerals$)"
  civic_heroic_tales:0 "วีรบุรุษในตำนาน"
- civic_heroic_tales_desc:1 "The legendary heroes of the past inspire this civilizations young people to achieve the extraordinary. As role models, government officials are expected to embody these ideals."
+ civic_heroic_tales_desc:1 "The legendary heroes of the past inspire each new generation to achieve the extraordinary. As role models, government officials embody these ideals."
  civic_heroic_tales_effects:0 "$tr_aptitude_adopt_desc$"
  civic_dystopian_society:1 "ระบอบเผด็จการกดขี่"
  civic_dystopian_society_desc:1 "Only the elite of the elite deserve the best of the best. Everyone else is expected to provide for the ruling class and their lackeys."
