--- a/mod/thmod/localisation/english/plantoids_l_english.yml
+++ b/mod/thmod/localisation/english/plantoids_l_english.yml
@@ -109,11 +109,13 @@
  origin.7005.desc: "By studying the feeding habits of our voidborne friends, our scientists have made a scientific breaktrough. $tech_space_whale_weapon_1_desc$. This technology will doubtlessly prove useful."
  civic_idyllic_bloom:0 "ธรรมชาติบานสะพรั่ง"
  civic_idyllic_bloom_desc:0 "This society has always spent much time on improving and caring for their environment, in pursuit of building a true paradise for its inhabitants."
- civic_hive_idyllic_bloom:0 "$civic_idyllic_bloom$"
+ civic_hive_idyllic_bloom:0 "Mycorrhizal Ideal"
  civic_hive_idyllic_bloom_desc:0 "The Hive Mind cares for the environment, building a paradise in pursuit of synergistic perfection."
  civic_tooltip_idyllic_bloom_effects:2 "Can build £building£ §Y$building_gaiaseeders$§! on your and your vassal's worlds ideal to your starting species.\n$building_gaiaseeders_all_desc$\nAs you unlock improved £society£ §YTerraforming§! technologies, £building£ §Y$building_gaiaseeders$§! can be constructed on additional planet types."
- civic_tooltip_not_idyllic_bloom:0 "ไม่มีพลเมือง §Y$civic_idyllic_bloom$§!"
  disables_idyllic_bloom:0 "§Rการเลือกการยกระดับนี้จะปิดการใช้งานคุณสมบัติพลเมือง$civic_idyllic_bloom$§!"
+ civic_tooltip_not_idyllic_bloom: "ไม่มีพลเมือง ['concept_idyllic_bloom_civics']"
+ concept_idyllic_bloom_civics: "Idyllic Bloom"
+ concept_idyllic_bloom_civics_desc: "$concept_idyllic_bloom_civics$ Civics consist of \n- ['civic:civic_idyllic_bloom']$NEW_LINE$- ['civic:civic_hive_idyllic_bloom']"
  gaia_seeder_bloomed_pops_effect: "Having completed transformation of [This.GetName] into a $pc_gaia$, the Gaia Seeder will now transform our population to better adapt them to this world.\n\nIncreases the effects of the §Y$trait_plantoid_bloomed$§! and §Y$trait_plantoid_budding$§! Traits by §G+50%§!."
  gaia_seeder_bloom_timer_tooltip: "\nThe next Bloom on §Y[This.GetName]§! will occur on §Y[This.gaia_seeder_bloom_timer]§!."
  MESSAGE_POPS_IDYLLIC_BLOOMED_TITLE: "Pops Bloomed"
@@ -162,7 +164,7 @@
  thankful_for_gaia_desc:0 "Our Overlord has recently terraformed one of our planets into a gaia world. How kind of them!"
  trait_plantoid_phototrophic:0 "สังเคราะห์แสง"
  trait_plantoid_phototrophic_desc:0 "§LThis species is sustained by a combination of both food and sunlight.§!\n"
- TRAIT_PLANTOID_PHOTOTROPHIC_EFFECT:0 "แทนที่ §Y50%§! ของ £food£ §Yอาหาร§! ที่ใช้บำรุงรักษา ด้วย £energy£ §Yพลังงาน§!"
+ TRAIT_PLANTOID_PHOTOTROPHIC_EFFECT:0 "Replaces §Y50%§! of $r_food$ Upkeep with $r_energy$ Upkeep"
  trait_plantoid_radiotrophic:0 "สังเคราะห์รังสี"
  trait_plantoid_radiotrophic_desc:0 "§LThis species is sustained by a combination of both food and low-energy radiation, and as such can thrive on the most inhospitable of worlds.§!"
  TRAIT_PLANTOID_RADIOTROPHIC_EFFECT:1 "$TRAIT_PLANTOID_PHOTOTROPHIC_EFFECT$\nการบำรุงรักษาที่เป็น £energy£ §Yพลังงาน§! ถูกลบออกสำหรับประชากรที่อาศัยอยู่บน §Yดาวแห่งความตาย§!\nการเพิ่มจำนวนของประชากรบน §Yดาวแห่งความตาย§!  §G+10%§!\nการอยู่อาศัยได้บนดาวแห่งความตาย: §G+10%§!"
@@ -198,9 +200,12 @@
  civic_hive_catalytic_processing_desc:0 "The Hive Mind reprocesses excess organic matter into advanced resources suitable for spacebound structures."
  civic_tooltip_hive_catalytic_processing_effects:0 "แทนที่ £job_alloy_drone£ §Y$job_alloy_drone_plural$§! ด้วย £job_catalytic_drone£ §Y$job_catalytic_drone_plural$§! $job_catalytic_drone_effect_desc$.$catalytic_gestalt_additional_effects$"
  catalytic_gestalt_additional_effects: "\n£job_chemist_drone£ §Y$job_chemist_drone_plural$§!, £job_translucer_drone£ §Y$job_translucer_drone_plural$§!, and £job_gas_refiner_drone£ §Y$job_gas_refiner_drone_plural$§! have their $r_minerals$ Upkeep replaced with $r_food$ Upkeep."
- civic_machine_catalytic_processing:1 "$civic_hive_catalytic_processing$"
+ civic_machine_catalytic_processing:1 "Organic Retrofitting"
  civic_machine_catalytic_processing_desc:0 "The Machine Intelligence reprocesses redundant organic matter into advanced resources suitable for spacebound structures."
  civic_tooltip_machine_catalytic_processing_effects:0 "แทนที่ £job_fabricator£ §Y$job_fabricator_plural$§! ด้วย £job_catalytic_drone£ §Y$job_catalytic_drone_plural$§! $job_catalytic_drone_effect_desc$.$catalytic_gestalt_additional_effects$"
+ civic_tooltip_not_catalytic: "ไม่มีพลเมือง ['concept_catalytic_civics']"
+ concept_catalytic_civics: "Catalytic Processing"
+ concept_catalytic_civics_desc: "$concept_catalytic_civics$ Civics consists of \n- ['civic:civic_catalytic_processing']$NEW_LINE$- ['civic:civic_corporate_catalytic_processing']$NEW_LINE$- ['civic:civic_hive_catalytic_processing']$NEW_LINE$- ['civic:civic_machine_catalytic_processing']"
  job_catalytic_technician:0 "ช่างเทคนิคเร่งปฏิกิริยา"
  job_catalytic_technician_plural:0 "ช่างเทคนิคเร่งปฏิกิริยา"
  job_catalytic_technician_desc:0 "Highly trained workers are needed to turn raw organic matter into durable alloys necessary for advanced construction."
