--- a/mod/thmod/localisation/english/pop_factions_l_english.yml
+++ b/mod/thmod/localisation/english/pop_factions_l_english.yml
@@ -292,8 +292,11 @@
  TRADITIONALIST_PLANETBOUND_DESC:0 "Restricting ourselves to planet-bound settlements and shunning Deep-Space Habitats will please the [Root.GetName]."
  TRADITIONALIST_SPACEBOUND:0 "Life in the Dark"
  TRADITIONALIST_FLESH_IS_STRONG:0 "ร่างกายเป็นสิ่งที่แข็งแกร่ง"
- TRADITIONALIST_FLESH_IS_STRONG_DESC:0 "Corrupting our natural bodies with cybernetic implants will greatly displease the [Root.GetName]."
+ TRADITIONALIST_FLESH_IS_STRONG_DESC:2 "Corrupting our natural bodies with full cybernetic implants will greatly displease the [Root.GetName]."
+ TRADITIONALIST_FLESH_IS_STRONG_LIMITED_DESC: "Corrupting our natural bodies with limited cybernetic implants will displease the [Root.GetName]."
  TRADITIONALIST_FLESH_IS_WEAK:0 "ร่างกายเป็นสิ่งที่อ่อนแอ"
+ TRADITIONALIST_UNHALLOWED_FLESH:0 "Unhallowed Flesh"
+ TRADITIONALIST_UNHALLOWED_FLESH_DESC: "Fully embracing the augmentation of natural bodies with cybernetic implants will greatly please the [Root.GetName]."
  TRADITIONALIST_PURITY_TRADITION:0 "Traditional Purity"
  TRADITIONALIST_NO_PURITY_TRADITION:0 "$TRADITIONALIST_PURITY_TRADITION$"
  TRADITIONALIST_PURITY_TRADITION_DESC:0 "Adopting any Traditions emphasizing §YPurity§! will please the [Root.GetName]."
