--- a/mod/thmod/localisation/english/situations_l_english.yml
+++ b/mod/thmod/localisation/english/situations_l_english.yml
@@ -66,6 +66,8 @@
  stage_6:0 "Stage VI"
  stage_7:0 "Stage VII"
  stage_8:0 "Stage VIII"
+ stage_9: "Stage IX"
+ stage_10: "Stage X"
  stage_2_alt:0 "$stage_2$"
  stage_3_alt:0 "$stage_3$"
  string_current_approach:0 "แนวทางปัจจุบัน"
@@ -324,11 +326,12 @@
  country_situations:0 "สถานการณ์"
  mod_country_situations_sr_dark_matter_produces_add:0 "$mod_country_base_sr_dark_matter_produces_add$"
  mod_country_situations_physics_research_produces_add:0 "£physics_research£ การวิจัยทางฟิสิกส์ต่อเดือน"
+ mod_country_situations_influence_produces_add: "Monthly £influence£ Influence"
  mutiny_tooltip:1 "We have lost control of the space station."
  gestalt_black_hole_good:0 "Transcended Consciousness"
  gestalt_black_hole_good_desc:1 "A fragment of our [Owner.GetBrainName] is lodged in the event horizon of a black hole, where a single second stretches into an eon. The time difference has its uses."
  gestalt_black_hole_bad:0 "Disjointed Consciousness"
- gestalt_black_hole_bad_desc:1 "A fragment of our [Owner.GetBrainName] is stuck in the event horizon of a black hole, where seconds stretch out into aeons. The time difference is jarring."
+ gestalt_black_hole_bad_desc:1 "A fragment of our [Owner.GetBrainName] is stuck in the event horizon of a black hole, where seconds stretch out into eons. The time difference is jarring."
  situation.501.name:0 "Free Fall"
  situation.501.desc:1 "Due to an unexpected collision with a chunk of space debris, the §Y[gravity_well_station.GetName]§! has deviated from its innermost stable circular orbit and is now slowly closing the distance towards the nearby black hole. While the accident puts the whole station at risk, it is also an incredible opportunity to study the black hole and siphon huge quantities of §HDark Matter§!.\n\nEmergency thrusters have been deployed to correct the station's orbit."
  situation.501.a:0 "Get away from there!"
