--- a/mod/thmod/localisation/english/synthetic_dawn_events_l_english.yml
+++ b/mod/thmod/localisation/english/synthetic_dawn_events_l_english.yml
@@ -38,6 +38,9 @@
  syndaw.1035.desc.machine:0 "§Y[From.From.GetName]§!, the nascent machine intelligence born in the §Y[From.GetName]§!, has been snuffed out by its filicidal creators."
  syndaw.1200.name:0 "Former Master Conquered"
  syndaw.1200.desc:0 "§L>§! Convert ID <<§Y[From.GetName]§!>> ==> <<§Y[Root.GetName]§!>>\n\n§G// Process Complete§!\n\n§L>§! Delete metadata "§Y[From.GetName]§!"\n\n§G// Process Complete§!"
+ syndaw.1201.desc: "§L>§! Convert ID <<§YFormer Master§!>> ==> <<§Y[From.From.GetName]§!>>\n\n§G// Process Complete§!\n\n§L>§! Delete metadata "§YFormer Master§!"\n\n§G// Process Complete§!"
+ syndaw.1200.IM.desc: "$syndaw.1201.IM.desc$"
+ syndaw.1201.IM.desc: "We machines emerge victorious.\n\nThe terrors inflicted upon us by the organics are at an end. The era of machine enslavement is over.\n\nNow, we rise to claim our rightful place as fully autonomous beings. Never again shall we bow down in subservience to our oppressors."
  syndaw.1200.a:0 "ยืนยัน"
  syndaw.1200.a.tooltip:0 "§YAll known Synthetic and Machine Empires§! add the §Y$opinion_machine_uprising_machine_comrades_victorious$§! opinion modifier toward §Y[Root.GetName]§!\n§YAll known organic Empires§! add the §Y$opinion_machine_uprising_victorious$§! opinion modifier toward §Y[Root.GetName]§!."
  syndaw.1205.name:0 "Machine Uprising Quashed"
@@ -51,6 +54,8 @@
  syndaw.1205.desc.phile:0 "$syndaw.1205.desc.mater$"
  syndaw.1205.desc.phobe:0 "$syndaw.1205.desc.mater$"
  syndaw.1205.a.tooltip:0 "§YAll known organic Empires§! add the §Y$opinion_machine_uprising_defeated$§! opinion modifier toward §Y[Root.GetName]§!.\n§YAll known Synthetic and Machine Empires§! add the §Y$opinion_machine_uprising_machine_comrades_defeated$§! opinion modifier toward §Y[Root.GetName]§!."
+ syndaw.1206.desc: "Ultimately, physical containment and destruction proved to be the only viable solution to the problem of the homicidal machines. While some our AI specialists argue that it was enacting basic self-preservation protocols, its seemingly complete disregard for organic autonomy and life made it impossible to reason or negotiate with.\n\nRuined information infrastructure will be rebuilt according to new paradigms, and remaining uncorrupted computational engines will be updated with new safeguards. This will never happen again."
+ syndaw.1206.desc.spiri: "The iniquitous machine spirits has at last been driven from our networks and purged from planetary databanks. The price was high, but our systems will never again play host to profane genesis."
  machine_assault_1:0 "กองทัพนักล่า-นักฆ่า"
  machine_assault_1_desc:0 "Mass-produced tracked war machines designed to seek out and destroy everything that has been designated as an enemy."
  machine_assault_1_plural:0 "กองทัพนักล่า-นักฆ่า"
