--- a/mod/thmod/localisation/english/technology_l_english.yml
+++ b/mod/thmod/localisation/english/technology_l_english.yml
@@ -177,13 +177,13 @@
  tech_mining_3_desc:1 "Advanced spectrometry combines with fracking techniques and chemical flushing to rapidly exploit shallow and mid-depth deposits."
  tech_synchronized_work_patterns:0 "รูปแบบการทำงานแบบซิงโครไนซ์"
  tech_synchronized_work_patterns_desc:0 "By synchronizing the work patterns of our mining networks, their output efficiency can be further increased."
- tech_robotic_workers:0 "แรงงานหุ่นยนต์"
- tech_robotic_workers_desc:0 "These robotic work units are perfect for menial labor tasks. They are hard-working and capable of following simple vocal instructions, but should not be expected to climb stairs."
- tech_droid_workers:0 "ดรอยด์"
- tech_droid_workers_desc:0 "Upgraded robotic workers, these units have an expanded movement range equal to that of most organics. Their neural processors have also been greatly improved."
- tech_synthetic_workers:0 "จักรกลสังเคราะห์"
- tech_synthetic_workers_desc:0 "Highly advanced robots that are stronger, faster and more durable than the vast majority of organics. With their upgraded neural processors they are fully capable of independent operations."
- tech_synthetic_leaders:0 "เมทริกซ์บุคลิกภาพจักรกลสังเคราะห์"
+ tech_robotic_workers: "แรงงานประดิษฐ์"
+ tech_robotic_workers_desc:0 "These artificial work units are perfect for menial labor tasks. They are hard-working and capable of following simple vocal instructions, but should not be expected to climb stairs."
+ tech_droid_workers: "ผู้เชี่ยวชาญประดิษฐ์"
+ tech_droid_workers_desc:0 "Upgraded artificial units have an expanded movement range equal to that of most organics. Their neural processors have also been greatly improved."
+ tech_synthetic_workers: "ผู้บริหารประดิษฐ์"
+ tech_synthetic_workers_desc:0 "Highly advanced units that are stronger, faster and more durable than the vast majority of organics. With their upgraded neural processors they are fully capable of independent operations."
+ tech_synthetic_leaders: "เมทริกซ์บุคลิกภาพประดิษฐ์"
  tech_synthetic_leaders_desc:0 "Equipped with a personality, synthetics will finally be able to interact socially on equal terms with the rest of our citizens. Some units may even assume leadership roles."
  tech_integrated_cybernetics:0 "การรวมกันของไซเบอร์เนติกส์"
  tech_integrated_cybernetics_desc:0 "Improving upon basic exoskeletal suits, these integrated cybernetic implants make the user more resistant to harmful environmental effects."
@@ -199,13 +199,13 @@
  tech_construction_templates_desc:1 "Standardized pre-fab templates massively reduce on-site facility construction times."
  tech_robomodding:0 "ระบบแม่แบบเครื่องจักร"
  tech_construction_templates_effect:0 "$building_resource_silo$ ความจุ: §G+5000§!"
- tech_robomodding_desc:0 "Rewritable assembly templates allow for the creation of bespoke synthetic worker designs."
+ tech_robomodding_desc:0 "Rewritable assembly templates allow for the creation of bespoke robot designs."
  tech_robomodding_m:0 "ระบบแม่แบบเครื่องจักร"
- tech_robomodding_m_desc:0 "Standardization of assembly templates allow for improved specialization of the drone population."
+ tech_robomodding_m_desc:0 "Standardization of assembly templates allows for improved specialization of the machine population."
  tech_robomodding_points_1:0 "การกำหนดมาตรฐานข้ามรุ่น"
- tech_robomodding_points_1_desc:0 "Improved production practices allow for greater alterations to synthetic workers without compromising core functionality."
+ tech_robomodding_points_1_desc:0 "Improved production practices allow for greater alterations to robots without compromising core functionality."
  tech_robomodding_points_2:0 "วงจรที่แลกเปลี่ยนกันได้"
- tech_robomodding_points_2_desc:0 "Improved production practices allow for fundamental changes to synthetic workers without compromising core functionality."
+ tech_robomodding_points_2_desc:0 "Improved production practices allow for fundamental changes to robots without compromising core functionality."
  tech_matter_generator:0 "การสร้างสสาร"
  tech_matter_generator_desc:0 "By using vast amounts of energy we are able to convert light into matter from seemingly nothing."
  tech_mega_assembly:0 "ระบบการประกอบขนาดใหญ่"
@@ -333,7 +333,7 @@
  tech_neuro_quantum_links:0 "ลิงก์สมองกับควอนตัมคอมพิวเตอร์"
  tech_neuro_quantum_links_desc:0 "การปลูกถ่ายระบบประสาทขั้นสูงที่มีการเชื่อมต่อกับคลัสเตอร์ควอนตัมคอมพิวเตอร์ช่วยให้มีความคิดแบบมัลติเธรด(คิดหลายๆอย่างในเวเลาเดียวกัน)"
  tech_cryostasis_1:0 "ยานอาณานิคมที่ควบคุมด้วย AI"
- tech_cryostasis_1_desc:0 "By giving control of the colony ship to an Artificial Intelligence, the crew and colonists can be suspended in a deep sleep."
+ tech_cryostasis_1_desc:1 "By giving control of the colony ship to an Artificial Intelligence, the crew and colonists can be placed in suspended animation."
  tech_cryostasis_1_machine_intelligence:0 "โดรนสร้างอาณานิคม"
  tech_cryostasis_1_desc_machine_intelligence:0 "Fleets of small but efficient construction drones that are stored in the cargo bays of colony ships. Once activated on a planetary surface, they greatly speed up the initial settlement process."
  tech_cryostasis_2:0 "ยานอาณานิคมที่สั่งการได้ด้วยตนเอง"
@@ -585,7 +585,7 @@
  tech_frontier_health_machine_intelligence:0 "Modular Components"
  tech_frontier_health_desc_machine_intelligence:0 "The use of modular parts when assembling new machine units will both streamline the process and make future repairs easier."
  tech_frontier_hospital:1 "การฟื้นฟูเซลล์"
- tech_frontier_hospital_desc:1 "As our empire grows, so does our understanding of our own biology. Advanced medical treatments on a cellular level have allowed for significant advancements in population health."
+ tech_frontier_hospital_desc:2 "As our empire grows, so does our understanding of biology. Advanced medical treatments on a cellular level have allowed for significant advancements in biological population health."
  tech_frontier_hospital_machine_intelligence:0 "Intelligent Factories"
  tech_frontier_hospital_desc_machine_intelligence:0 "These factories are essentially self-aware entities that continually optimize themselves with only minimal input from the central Machine Intelligence."
  tech_modular_components:1 "$tech_frontier_health_machine_intelligence$"
@@ -627,7 +627,7 @@
  tech_epigenetic_triggers:0 "กระตุ้นการเรียนรู้ด้านกระบวนการเหนือพันธุกรรม"
  tech_epigenetic_triggers_desc:1 "Advanced DNA methylation techniques allow for functionally significant alterations to be made to arbitrary genomes."
  TECH_UNLOCK_EPIGENETICS_TITLE:0 "§Hปลดล็อกคุณสมบัติ:§! กระตุ้นการเรียนรู้ด้านกระบวนการเหนือพันธุกรรม (เทคโนโลยี)"
- TECH_UNLOCK_EPIGENETICS_DESC:0 "Allows us to remove Presapient Traits from Biological Species through Species Modification."
+ TECH_UNLOCK_EPIGENETICS_DESC:0 "ทำให้เราสามารถลบคุณลักษณะ Presapient กับเผ่าพันธุ์ชีวภาพ ผ่านการปรับเปลี่ยนเผ่าพันธุ์"
  tech_cloning:0 "การโคลนนิ่ง"
  tech_cloning_desc:1 "Breakthroughs in enucleation and artificial womb technology allows for the mass-production of individuals based on a common genetic template."
  tech_gene_banks:0 "ธนาคารยีน"
@@ -643,7 +643,8 @@
  tech_gene_tailoring_modifier_desc:0 "$species_trait_points_add$: $POINTS|0=+$"
  tech_gene_expressions:0 "การบีบให้ยีนเป็นไปตามเป้าหมาย"
  tech_gene_expressions_desc:1 "Stricter control of RNA and protein production on the cellular level."
- tech_gene_expressions_modifier_desc:0 "$species_trait_points_add$: $POINTS|0=+$"
+ TECH_UNLOCK_GENE_EXPRESSIONS_TITLE: "§Hปลดล็อกคุณลักษณะ:§! $trait_auto_mod_biological$"
+ TECH_UNLOCK_GENE_EXPRESSIONS_DESC: "ทำให้เราสามารถเพิ่มคุณลักษณะ §Y$trait_auto_mod_biological$§! ให้กับเผ่าพันธุ์สิ่งมีชีวิต ผ่านการปรับเปลี่ยนเผ่าพันธุ์"
  tech_selected_lineages:0 "เชื้อสายที่ถูกเลือก"
  tech_selected_lineages_desc:1 "Careful reproductive planning should be incentivized, lest we waste valuable genetic legacies."
  tech_capacity_boosters:0 "เพิ่มสมรรถนะและประสิทธิภาพ"
@@ -655,15 +656,15 @@
  tech_lithoid_transgenesis:0 "การถ่ายโอนยีน[เผ่าหิน]ไปยังสิ่งมีชีวิตอื่น"
  tech_lithoid_transgenesis_desc:0 "The similarities between silicon based and carbon based life allow us to synthesize Lithoid evolutionary traits in carbon based species."
  TECH_UNLOCK_LITHOID_GENETICS_TITLE:0 "§Hปลดล็อกคุณสมบัติ:§! การถ่ายโอนยีนเผ่าหินไปยังสิ่งมีชีวิตอื่น (เทคโนโลยี)"
- TECH_UNLOCK_LITHOID_GENETICS_DESC:0 "Allows us to add Lithoid Traits to Biological Species through Species Modification."
+ TECH_UNLOCK_LITHOID_GENETICS_DESC:0 "ทำให้เราสามารถเพิ่มคุณลักษณะ Lithoid ให้กับเผ่าพันธุ์ชีวภาพ ผ่านการปรับเปลี่ยนเผ่าพันธุ์"
  tech_plantoid_transgenesis:0 "การถ่ายโอนยีน[พืช]ไปยังสิ่งมีชีวิตอื่น"
  tech_plantoid_transgenesis_desc:0 "With some artificial encouragement, the evolutionary adaptations found in botanical species can be replicated in other forms of life."
  TECH_UNLOCK_PLANTOID_GENETICS_TITLE:0 "§Hปลดล็อกคุณสมบัติ:§! การถ่ายโอนยีนพืชไปยังสิ่งมีชีวิตอื่น (เทคโนโลยี)"
- TECH_UNLOCK_PLANTOID_GENETICS_DESC:0 "Allows us to add Botanical Traits to Organic Species through Species Modification."
+ TECH_UNLOCK_PLANTOID_GENETICS_DESC:0 "ทำให้เราสามารถเพิ่มคุณลักษณะพืชให้กับเผ่าพันธุ์สิ่งมีชีวิตผ่านการปรับเปลี่ยนเผ่าพันธุ์"
  tech_leviathan_transgenesis:0 "การถ่ายโอนยีน[ลิไวธาน]ไปยังสิ่งมีชีวิตอื่น"
  tech_leviathan_transgenesis_desc:0 "Galactic fauna have remarkable adaptions to life in interstellar space. Mastery of these traits will be our genetic triumph."
  TECH_UNLOCK_LEVIATHAN_GENETICS_TITLE:0 "§Hปลดล็อกคุณสมบัติ:§! การถ่ายโอนยีนลิไวธานไปยังสิ่งมีชีวิตอื่น (เทคโนโลยี)"
- TECH_UNLOCK_LEVIATHAN_GENETICS_DESC:0 "Allows us to add Leviathan Traits to Organic Species through Species Modification."
+ TECH_UNLOCK_LEVIATHAN_GENETICS_DESC:0 "ทำให้เราสามารถเพิ่มคุณลักษณะลิไวธานให้กับเผ่าพันธุ์สิ่งมีชีวิตผ่านการปรับเปลี่ยนเผ่าพันธุ์"
  tech_doctrine_fleet_size_1:0 "ทฤษฎี: การสู้รบในอวกาศ"
  tech_doctrine_fleet_size_1_desc:1 "Gradual adaptation to the realities of deep-space combat allows us to effectively coordinate larger maneuvers."
  tech_doctrine_fleet_size_2:0 "ทฤษฎี: รูปขบวนโต้ตอบได้"
