--- a/mod/thmod/localisation/english/triggers_effects_l_english.yml
+++ b/mod/thmod/localisation/english/triggers_effects_l_english.yml
@@ -210,6 +210,10 @@
  HAS_NOT_FREE_JOBS:0 "จำนวนงานที่ว่างไม่ $COMPARATOR$ $NUM|Y$"
  HAS_UNEMPLOYED:0 "จำนวนประชากรที่ว่างงาน $COMPARATOR$ $NUM|Y$"
  HAS_NOT_UNEMPLOYED:0 "จำนวนประชากรที่ว่างงาน ไม่$COMPARATOR$ $NUM|Y$"
+ HAS_FREE_JOBS_SPECIFIC: "Number of free $JOB$ jobs is $COMPARATOR$ $NUM|Y$"
+ HAS_FREE_JOBS_CATEGORY: "Number of free jobs in $CATEGORY$ is $COMPARATOR$ $NUM|Y$"
+ HAS_NOT_FREE_JOBS_SPECIFIC: "Number of Unemployed Pops is NOT $COMPARATOR$ $NUM|Y$"
+ HAS_NOT_FREE_JOBS_CATEGORY: "Number of free jobs in $CATEGORY$ is NOT $COMPARATOR$ $NUM|Y$"
  HAS_NUM_POPS:0 "จำนวนประชากร $COMPARATOR$ $NUM|Y$"
  HAS_NOT_NUM_POPS:0 "จำนวนประชากรไม่ $COMPARATOR$ $NUM|Y$"
  HAS_NUM_SAPIENT_POPS:0 "จำนวนประชากรเซเปียน $COMPARATOR$ $NUM|Y$"
@@ -1214,8 +1218,8 @@
  DISMANTLE_EFFECT:0 "The station is dismantled.\n"
  ACTIVATE_ADVISOR:0 "ที่ปรึกษา $COUNTRY|Y$ ถูกเพิ่ม"
  DEACTIVATE_ADVISOR:0 "ที่ปรึกษา $COUNTRY|Y$ ถูกลบ"
- BEGIN_EVENT_CHAIN_EFFECT:1 "เริ่มเหตุการณ์ต่อเนื่อง $NAME$\n\n"
- END_EVENT_CHAIN_EFFECT:1 "จบเหตุการณ์ต่อเนื่อง: $NAME$\n\n"
+ BEGIN_EVENT_CHAIN_EFFECT:1 "Begins the $NAME$ Event Chain\n\n"
+ END_EVENT_CHAIN_EFFECT:1 "Ends the $NAME$ Event Chain\n\n"
  SHIFT_ETHIC_EFFECT:0 "\n$COUNTRY|Y$ มีแนวโน้มหลักจริยธรรมไปทาง $ETHIC|Y$\n"
  CHANGE_BACKGROUND_ETHIC:0 "Change Leader Ethic to $ETHIC|Y$"
  SET_COUNCIL_POSITION_EFFECT:0 "กำหนดผู้นำให้กับสภาในตำแหน่ง $POSITION|Y$"
@@ -1449,10 +1453,10 @@
  CRIME_AT_LEAST:0 "$PLANET_CRIME_TITLE$ $VAL0|2Y$ อย่างน้อย $COMPARE$ $VAL1|2Y$"
  STABILITY_LESS_THAN:0 "$PLANET_STABILITY_TITLE$ $VAL0|2Y$ น้อยกว่า $COMPARE$ $VAL1|2Y$"
  STABILITY_AT_LEAST:0 "$PLANET_STABILITY_TITLE$ $VAL0|2Y$ อย่างน้อย $COMPARE$ $VAL1|2Y$"
- TRIGGER_HAS_CIVIC:2 "มีพลเมือง $CIVIC|Y$"
+ TRIGGER_HAS_CIVIC:3 "มีพลเมือง ['civic:$CIVIC$', $CIVIC_NAME$]"
  TRIGGER_FANATIC_PURIFIERS:0 "Has §Y$civic_fanatic_purifiers$§! Government Civic"
  TRIGGER_DEVOURING_SWARM:0 "Has §Y$civic_hive_devouring_swarm$§! Government Civic"
- TRIGGER_NOT_HAS_CIVIC:2 "ไม่มีพลเมือง $CIVIC|Y$"
+ TRIGGER_NOT_HAS_CIVIC:3 "ไม่มีพลเมือง ['civic:$CIVIC$', $CIVIC_NAME$]"
  any_owned_army_trigger:0 "Any owned Army"
  effect_random_owned_army:0 "Random owned Army"
  effect_every_owned_army:0 "Every owned Army"
@@ -1601,8 +1605,8 @@
  FEDERATION_COHESION_GROWTH_AT_LEAST:1 "$FEDERATION|H$ has $COMPARE$ $VAL1|2Y$ cohesion Growth"
  FEDERATION_COHESION_LESS_THAN:1 "$FEDERATION|H$ does NOT have $COMPARE$ $VAL1|2Y$ cohesion"
  FEDERATION_COHESION_AT_LEAST:1 "$FEDERATION|H$ has $COMPARE$ $VAL1|2Y$ cohesion"
- START_SITUATION_EFFECT:0 "Starts Situation $SITUATION|Y$"
- DESTROY_SITUATION_EFFECT:0 "บทสรุปสถานการณ์ $NAME|Y$"
+ START_SITUATION_EFFECT:0 "Starts Situation: $SITUATION|Y$"
+ DESTROY_SITUATION_EFFECT:0 "Concludes Situation: $NAME|Y$"
  ADD_SITUATION_PROGRESS:0 "สถานการณ์ $SITUATION|Y$ ก้าวหน้าไป $AMOUNT|Y$"
  ADD_SITUATION_PROGRESS_NEGATIVE:0 "The $SITUATION|Y$ Situation recedes by $AMOUNT|Y$"
  SET_SITUATION_APPROACH_EFFECT:1 "Situation Approach is set to '$APPROACH|Y$'. This will have the following effects:\n$EFFECTS$"
@@ -1679,10 +1683,10 @@
  HAS_NOT_UNLOCKED_ALL_TRADITIONS:0 "$COUNTRY|Y$ has NOT unlocked all available Traditions"
  HAS_DIPLO_STANCE:0 "Has Diplomacy Stance $STANCE|Y$"
  DOES_NOT_HAVE_DIPLO_STANCE:0 "ไม่มีท่าทีทางการทูต $STANCE|Y$"
- TRIGGER_NOT_HAS_SPECIES_ARCHETYPE:0 "ไม่มีเผ่าพันธุ์ชนิด: $TYPE|Y$"
- TRIGGER_HAS_SPECIES_ARCHETYPE:0 "มีเผ่าพันธุ์ประเภท: $TYPE|Y$"
- TRIGGER_HAS_ORIGIN:1 "มีจุดกำเนิด $ORIGIN|Y$"
- TRIGGER_NOT_HAS_ORIGIN:1 "ไม่มีจุดกำเนิด $ORIGIN|Y$"
+ TRIGGER_NOT_HAS_SPECIES_ARCHETYPE:1 "ไม่มีเผ่าพันธุ์ประเภท: $TYPE|Y$"
+ TRIGGER_HAS_SPECIES_ARCHETYPE:1 "มีเผ่าพันธุ์ประเภท: $TYPE|Y$"
+ TRIGGER_HAS_ORIGIN:2 "Has ['civic:$ORIGIN$', $ORIGIN_NAME$] Origin"
+ TRIGGER_NOT_HAS_ORIGIN:2 "Does NOT have ['civic:$ORIGIN$', $ORIGIN_NAME$] Origin"
  HAS_ORIGIN_ICON_TIP:0 "This option is available due to $WHO|H$ having the $ORIGIN|Y$ Origin"
  ADD_FAVORS_EFFECT:0 "ได้บุญคุณ $NUM|Y$ เพื่อใช้กับ $TARGET|H$"
  REMOVE_FAVORS_EFFECT:0 "ลบบุญคุณ $NUM|Y$ จาก $TARGET|H$"
@@ -1874,8 +1878,9 @@
  SELECT_CRISIS_PATH:0 "$COUNTRY$ adopts the $PATH$"
  UNLOCK_MENACE_PERK:0 "$COUNTRY$ unlocks the $PERK$ Menace Perk"
  COMPLETE_CRISIS_OBJECTIVE:3 "The $OBJ|Y$ crisis objective is completed, granting $REWARD|G$ Menace."
+ COMPLETE_CRISIS_OBJECTIVE_FAIL: "The chosen crisis path $PATHY$ doesn't contain the crisis objective $OBJ|Y$. No Menace was rewarded."
  DEACTIVATE_MENACE_PERK:0 "The Menace Perk $PERK$ was deactivated for $COUNTRY$"
- ACTIVATE_CRISIS_PROGRESSION:1 "ทำให้ $COUNTRY$ สามารถก้าวไปสู่ §Yการเป็น §Rไครซิส§!§!"
+ ACTIVATE_CRISIS_PROGRESSION:1 "Allows the $COUNTRY$ to progress toward §YBecoming the §RCrisis§!§!."
  ACTIVATE_CRISIS_PROGRESSION_NO_COUNTRY: "Allows you to progress towards §YBecoming the §RCrisis§!§!."
  CREATE_NEBULA_EFFECT:0 "เนบิวลาถูกสร้างขึ้นในระบบดาว $SYSTEM|Y$"
  ADD_VICTORY_SCORE_EFFECT:0 "$VALUE$ is added to the Victory Score of $COUNTRY|Y$"
@@ -2009,3 +2014,10 @@
  NUM_LEADER_TRAIT_TIERS_COUNCILOR_NON_SUBCLASS: "Number of non subclass Councilor trait tiers are $COMPARATOR$ $NUM|Y$"
  NUM_LEADER_TRAIT_TIERS_NEGATIVE_NON_COUNCIL_NON_SUBCLASS: "Number of negative non subclass non Councilor trait tiers are $COMPARATOR$ $NUM|Y$"
  NUM_LEADER_TRAIT_TIERS_POSITIVE_NON_COUNCIL_NON_SUBCLASS: "Number of positive non subclass non Councilor trait tiers are $COMPARATOR$ $NUM|Y$"
+ ACTIVATE_FOG_MACHINE: "Activate the fog machine of country '$COUNTRY|Y$' with fog cloud type '$CLOUD_TYPE|Y$'"
+ DEACTIVATE_FOG_MACHINE_YES: "Fog macnine of country '$COUNTRY|Y$' has been deactivated"
+ DEACTIVATE_FOG_MACHINE_NO: "Fog macnine of country '$COUNTRY|Y$' has not been deactivated"
+ FOG_MACHINE_AUTO_TRACKING_ON: "Allow the fog machine of country '$COUNTRY|Y$' to automatically track ownership of galactic objects"
+ FOG_MACHINE_AUTO_TRACKING_OFF: "Disallow the fog machine of country '$COUNTRY|Y$' to automatically track ownership of galactic objects"
+ TRIGGER_IS_ON_SLAVE_MARKET: "Is being sold on the slave market"
+ TRIGGER_IS_NOT_ON_SLAVE_MARKET: "Is NOT being sold on the slave market"
