--- a/mod/thmod/localisation/english/utopia_l_english.yml
+++ b/mod/thmod/localisation/english/utopia_l_english.yml
@@ -44,25 +44,29 @@
  allow_edict_consectrated_worlds:5 "§Hปลดล็อกการตัดสินใจ:§! ดาวศักดิ์สิทธิ์\n"
  describe_edict_consectrated_worlds:5 "§Eทำดาวเคราะห์ที่ไม่มีใครอยู่ให้เป็นดาวศักดิ์สิทธิ์ (สูงสุดที่ §Y3§!) เพิ่ม §Yแรงดึงดูดจริยธรรมจิตวิญญาณ§! และ §Yความอยู่ดีกินดีทั่วทั้งจักรวรรดิ§! เช่นเดียวกับ £unity£ §Yการสร้างเอกภาพ§! ตามระดับความศักดิ์สิทธิ์ของดาวเคราะห์ (เมื่อทำเสร็จแล้ว)§!"
  allow_machine_worlds:2 "§Hปลดล็อกตัวเลือกการปรับสภาพดาว:§! ดาวเครื่องจักร"
- describe_machine_worlds:6 "- §Yดาวเครื่องจักร§! เป็นดาวเคราะห์ชนิดพิเศษที่ไม่เอื้ออำนวยต่อสิ่งมีชีวิตส่วนใหญ่ แต่ไม่ถูกจำกัดจำนวนของเขตต่างๆที่รองรับ: £district£ §Yเขตกำเนิดไฟฟ้า§!, §Yเขตเหมืองแร่§!\n- £pop£ §Yประชากร§! ที่อาศัยบน §Yดาวเครื่องจักร§! จะมี §Yผลผลิตของทรัพยากร§! เพิ่มขึ้น §G+10%§! และ §Yการใช้ที่อยู่อาศัย§! ลดลง §G10%§! \n- เขต £district£ §Yเขตเกษตรกรรม§! บนดาวจะถูกทำลาย"
+ describe_machine_worlds:7 "Uninhabitable for most organics\nUnlimited £district£ §YCoordination§!, §YGenerator§!, and §YMining Districts§!\nDoubles Housing and Jobs from £district£ §YIndustrial§!, §YCoordination§!, §YGenerator§!, and §YMining Districts§!\n£pop£ Pop Resource Output: §G+10%§!\nHousing Usage: §G-10%§!\n§RRemoves all Agriculture Districts§!"
  allow_hive_worlds:0 "§Hปลดล็อกตัวเลือกการปรับสภาพดาว:§! ดาวที่เป็นรัง"
  describe_hive_worlds:1 "- §Yดาวที่เป็นรัง§! เป็นดาวเคราะห์ชนิดพิเศษที่ไม่เอื้ออำนวยต่อประชากรที่ไม่ใช่สิ่งมีชีวิตจิตสำนึกร่วม แต่ไม่ถูกจำกัดจำนวนของเขตต่างๆที่รองรับ: £district£ §Yเขตกำเนิดไฟฟ้า§!, §Yเขตเหมืองแร่§! และ §Yเขตเกษตรกรรม§! และ §Yเขตรัง§! มีประสิทธิภาพมากขึ้น\n\n- £pop£ §Yประชากร§! ที่อาศัยบน §Yดาวที่เป็นรัง§! จะมี §Yผลผลิตของทรัพยากร§! เพิ่มขึ้น §G+10%§!"
  ALLOW_PSI_CORPS:1 "ปลดล็อกสิ่งปลูกสร้าง: §Y$building_psi_corps$§!"
  ALLOW_PSI_ARMIES:0 "§H$psionic_army_plural$§! can now be recruited."
  dyson_sphere_0_MEGASTRUCTURE_DETAILS:1 "§Y$dyson_sphere_5$§! ห่อหุ้มดาวฤกษ์จนเต็มดวง โดยแปลงพลังงานแสงจากดาวฤกษ์ทั้งหมดเป็น £energy£ เครดิตพลังงานโดยตรง"
- dyson_sphere_0_CONSTRUCTION_INFO_DELAYED:4 "A $dyson_sphere_5$ will blot out the sun, turning all planets in the system into Barren or Frozen Worlds.\n\nAny Terraforming Candidates in the system will be ruined."
+ dyson_sphere_0_CONSTRUCTION_INFO_DELAYED:4 "§RA $dyson_sphere_5$ will blot out the sun, turning all planets in the system into Barren or Frozen Worlds.\n\nAny Terraforming Candidates in the system will be ruined.§!"
  dyson_sphere_0:0 "ทรงกลมไดสัน (ขั้นที่0:ที่ตั้ง)"
  dyson_sphere_0_DESC:0 "The construction site station serves as the base for the future construction of a Dyson Sphere."
  dyson_sphere_1:0 "ทรงกลมไดสัน (ขั้นที่1:ขึ้นเฟรม)"
- dyson_sphere_1_DESC:0 "The frame is the foundation for the future Dyson Sphere, and does not generate any energy."
- dyson_sphere_2:0 "ทรงกลมไดสัน (ขั้นที่2:เสร็จบางส่วน)"
+ dyson_sphere_1_DESC:0 "The frame is the foundation for the future Dyson Sphere and does not generate any energy."
+ dyson_sphere_2:1 "ทรงกลมไดสัน: ขั้นต้น"
  dyson_sphere_2_DESC:0 "A partially operational Dyson Sphere - §Y25%§! energy generation efficiency."
- dyson_sphere_3:0 "ทรงกลมไดสัน (ขั้นที่3:เสร็จบางส่วน)"
+ dyson_sphere_3:1 "ทรงกลมไดสัน: ขั้นกลาง"
  dyson_sphere_3_DESC:0 "A partially operational Dyson Sphere - §Y50%§! energy generation efficiency."
- dyson_sphere_4:0 "ทรงกลมไดสัน (ขั้นที่4:เสร็จบางส่วน)"
+ dyson_sphere_4:1 "ทรงกลมไดสัน: ขั้นสุดท้าย"
  dyson_sphere_4_DESC:0 "A partially operational Dyson Sphere - §Y75%§! energy generation efficiency."
  dyson_sphere_5:0 "ทรงกลมไดสัน"
  dyson_sphere_5_DESC:0 "A fully operational Dyson Sphere - §G100%§! energy generation efficiency."
+ COLONIZATION_IMPOSSIBLE_DYSON_SPHERE: "§R$TRIGGER_FAIL$Cannot colonize due to the §Y$dyson_sphere_5$§! around this system's star§!"
+ COLONIZATION_IMPOSSIBLE_DYSON_SPHERE_CONSTRUCTION: "§R$TRIGGER_FAIL$Cannot colonize due to the ongoing §Y$dyson_sphere_5$§! construction§!"
+ requires_no_dyson_sphere: "$TRIGGER_FAIL$Cannot construct in the same system as an existing §Y$dyson_sphere_5$§!"
+ requires_no_dyson_sphere_construction: "$TRIGGER_FAIL$Cannot construct in the same system as an ongoing §Y$dyson_sphere_5$ construction§!"
  spy_orb_0_MEGASTRUCTURE_DETAILS:1 "ขั้นของ §Y$spy_orb_4$§! จะค่อยๆขยายช่วงเซ็นเซอร์จนในที่สุดก็ครอบคลุมทั้งกาแล็กซี"
  spy_orb_0_CONSTRUCTION_INFO_DELAYED:3 "ขั้นของ $spy_orb_4$ จะค่อยๆขยายช่วงเซ็นเซอร์จนในที่สุดก็ครอบคลุมทั้งกาแล็กซี"
  spy_orb_0:0 "อาร์เรย์สังเกตุการณ์กาแล็กซี (ขั้นที่0:ที่ตั้ง)"
@@ -91,6 +95,8 @@
  requires_no_existing_gateway:0 "$TRIGGER_FAIL$Cannot build due to existing Gateway."
  requires_no_orbital_station:1 "$TRIGGER_FAIL$Cannot build due to existing Orbital Station."
  requires_no_habitable_planets:1 "$TRIGGER_FAIL$Cannot build in systems with habitable planets."
+ requires_no_colonies: "$TRIGGER_FAIL$Cannot build in systems with existing colonies"
+ blocked_by_pre_ftl_policy: "$TRIGGER_FAIL$Requires §Y$interference_aggressive$§! $policy_interference$ policy to build in system with Pre-FTL Civilizations"
  requires_surveyed_system:1 "Cannot build in systems that have not been surveyed."
  requires_inside_border:1 "$TRIGGER_FAIL$Cannot build outside Empire borders."
  requires_inside_border_or_subject:0 "$TRIGGER_FAIL$Cannot build outside Empire or Subject borders."
