--- a/mod/thmod/localisation/english/civic_and_origin_concepts_l_english.yml
+++ b/mod/thmod/localisation/english/civic_and_origin_concepts_l_english.yml
@@ -49,6 +49,7 @@
  concept_robotic_workers_desc: "- $i_unlocks_building$ $building_robot_assembly_plant$\n- $i_unlocks_feature$ $feature_robots$\n\n§L$tech_robotic_workers_desc$§!"
  concept_robomodding: "$tech_robomodding$"
  concept_robomodding_desc: "- $mod_ROBOT_species_trait_points_add$: §G+2§!\n- $i_unlocks_feature$ $feature_modify_robots$\n\n§L$tech_robomodding_desc$§!"
+ concept_adaptive_frames: "$trait_auto_mod_robotic$"
  concept_syncretic_proles: "$trait_syncretic_proles$"
  concept_syncretic_proles_desc: "- $MOD_POP_HAPPINESS$: §G+10%§!\n- $mod_planet_jobs_produces_mult$: §G+10%§!\n- ไม่สามารถสร้าง §Yผู้นำ§! ได้\n- ไม่สามารถทำงาน §Y$pop_cat_ruler$§! หรือ §Y$pop_cat_specialist$§! ได้\n\n§L$trait_syncretic_proles_desc$§!"
  concept_pc_gaia: "$pc_gaia$"
@@ -59,6 +60,8 @@
  concept_pc_nuked_desc: "- การอยู่อาศัยได้ (พื้นฐาน): §Y0%§!\n\n§L$pc_nuked_desc$§!"
  concept_survivor: "$trait_survivor$"
  concept_survivor_desc: "- การอยู่อาศัยได้บนดาวแห่งความตาย: §G+70%§!\n- อายุขัยผู้นำ: §G+10§! ปี\n\n§L$trait_survivor_desc$§!"
+ concept_robot_survivor: "$trait_robot_survivor$"
+ concept_robot_survivor_desc: "- Tomb World Habitability: §G+70%§!\n- Leader Lifespan: §G+10§! Years\n\n§L$trait_robot_survivor_desc$§!"
  concept_pc_relic: "$pc_relic$"
  concept_pc_relic_desc: "- การอยู่อาศัยได้ (พื้นฐาน): §Y80%§!\n- สามารถกู้คืนได้โดย §Iการตัดสินใจของดาวเคราะห์§! ที่จะปลดล็อก £district£ §Iเขตมหานคร§! พิเศษ\n\n§L$pc_relic_desc$§!"
  concept_ruined_arcology: "$d_ruined_arcology$"
@@ -75,6 +78,8 @@
  concept_pc_habitat_desc: "- $MOD_PLANET_COLONY_DEVELOPMENT_SPEED_MULT$: §G+200%§!\n- การอยู่อาศัยได้ (พื้นฐาน): §Y40%§!\n\n§L$pc_habitat_desc$§!"
  concept_void_dweller: "$trait_void_dweller_1$"
  concept_void_dweller_desc: "- $mod_habitat_jobs_produces_mult$: §G+15%§!\n- $mod_non_artificial_planet_jobs_produces_mult$: §R-15%§!\n- $void_dweller_trait_tooltip$\n\n§L$trait_void_dweller_1_desc$§!"
+ concept_void_dweller_2: "$trait_void_dweller_2$"
+ concept_void_dweller_2_desc: "- $mod_habitat_jobs_produces_mult$: §G+15%§!\n- $mod_non_artificial_planet_jobs_produces_mult$: §R-15%§!\n- $void_dweller_2_trait_tooltip$\n\n§L$trait_void_dweller_2_desc$§!"
  concept_habitat_preference: "$trait_pc_habitat_preference$"
  concept_habitat_preference_desc: "- $mod_pc_habitat_habitability$: §G+80%§!\n\n$trait_pc_habitat_preference_desc$"
  concept_habitat_1: "$tech_habitat_1$"
@@ -137,7 +142,9 @@
  concept_devouring_swarm_desc: "§EEffects:§!\n$civic_tooltip_devouring_swarm_effects$\n§EModifiers:§!\n$devouring_swarm_modifiers$\n\n§L$civic_hive_devouring_swarm_desc$§!"
  devouring_swarm_modifiers: "- $MOD_COUNTRY_STARBASE_INFLUENCE_COST_MULT$: §G-50%§!\n- $MOD_SHIP_HULL_MULT$: §G+25%§!\n- $MOD_SHIP_HULL_REGEN_ADD_PERC$: §G+5%§!\n- $MOD_SHIP_ARMOR_REGEN_ADD_PERC$: §G+5%§!\n- $MOD_ARMY_DAMAGE_MULT$: §G+40%§!\n- $mod_category_biology_research_speed_mult$: §G+20%§!\n- $MOD_STARBASE_SHIPYARD_BUILD_COST_MULT$: §G-25%§!\n- $MOD_COUNTRY_NAVAL_CAP_MULT$: §G+33%§!"
  concept_cave_dweller: "$trait_cave_dweller$"
+ concept_robot_cave_dweller: "$trait_robot_cave_dweller$"
  concept_cave_dweller_desc: "- $MOD_HABITABILITY_FLOOR_ADD$: §G50%§!\n- $mod_planet_jobs_minerals_produces_mult$: §G+15%§!\n- $MOD_SPECIES_EMPIRE_SIZE_MULT$: §R+10%§!\n- $MOD_BIO_POP_GROWTH_SPEED$: §R-20%§!\n\n§L$trait_cave_dweller_desc$§!"
+ concept_robot_cave_dweller_desc: "- $MOD_HABITABILITY_FLOOR_ADD$: §G50%§!\n- $mod_planet_jobs_minerals_produces_mult$: §G+15%§!\n- $MOD_SPECIES_EMPIRE_SIZE_MULT$: §R+10%§!\n- $MOD_POP_ASSEMBLY_SPEED$: §R-20%§!\n\n§L$trait_robot_cave_dweller_desc$§!"
  mod_mining_district_housing_add: "$MOD_PLANET_HOUSING_ADD$ จากเขตเหมืองแร่"
  mod_mining_district_buildings_add: "$MOD_PLANET_MAX_BUILDINGS_ADD$ จากเขตเหมืองแร่"
  concept_latent_psionic: "$trait_latent_psionic$"
@@ -150,6 +157,10 @@
  concept_shroudwalker_enclave_desc: "$gov_shroudwalker_enclave_desc$"
  concept_psionic_theory: "$tech_psionic_theory$"
  concept_psionic_theory_desc: "- £mod_empire_size_pops_mult£ $MOD_EMPIRE_SIZE_POPS_MULT$: §G-10%§!\n\n§L$tech_psionic_theory_desc$§!"
+ concept_cybernetic_ascension: "Cybernetic Ascension"
+ concept_cybernetic_ascension_desc: "The limits and constraints imposed on us by our feeble organic bodies are simply unacceptable. To reach our full potential, we must turn to cybernetic implants."
+ concept_integrated_cybernetics: "$tech_integrated_cybernetics$"
+ concept_integrated_cybernetics_desc: "- £mod_pop_environment_tolerance£ $MOD_POP_ENVIRONMENT_TOLERANCE$: §G+5%§!\n\n§L$tech_integrated_cybernetics_desc$§!"
  concept_slingshot_digsite: "$slingshot_digsite$"
  concept_slingshot_digsite_desc: "§L$slingshot_digsite_desc$§!"
  concept_quantum_catapult_restored_slingshot: "$quantum_catapult_restored_slingshot$"
@@ -163,7 +174,7 @@
  concept_overtuned_traits: "$origin_overtuned$"
  concept_overtuned_traits_desc: "Overtuned traits provide greater benefits compared to regular species traits at the cost of reducing leader lifespan."
  concept_gene_tailoring: "$tech_gene_tailoring$"
- concept_gene_tailoring_desc: "- $species_trait_points_add$: §G+1§!\n- $i_unlocks_feature$ $feature_modify_traits$ \n- $i_unlocks_feature$ $feature_pop_self_modification$\n\n§L$tech_gene_tailoring_desc$§!"
+ concept_gene_tailoring_desc: "- $species_trait_points_add$: §G+2§!\n- $i_unlocks_feature$ $feature_modify_traits$ \n- $i_unlocks_feature$ $feature_pop_self_modification$\n\n§L$tech_gene_tailoring_desc$§!"
  concept_damn_the_consequences: "$edict_damn_the_consequences$"
  concept_damn_the_consequences_desc: "- ผลกระทบเชิงบวกจาก คุณลักษณะ §Iการปรับแต่งที่มากเกินไป§!: §G+100%§!\n- $mod_planet_pops_organics_upkeep_mult$: §R+100%§!\n\n§L$edict_damn_the_consequences_desc$§!"
  concept_order_keep: "$building_order_keep$"
