--- a/mod/thmod/localisation/english/distant_stars_l_english.yml
+++ b/mod/thmod/localisation/english/distant_stars_l_english.yml
@@ -105,7 +105,9 @@
  DISTAR_PUZZLE_CAT:1 "Unscannable Object"
  DISTAR_PUZZLE_CAT_DESC:1 "An object that reflects our sensors has been located in the [From.GetStarName] asteroid field, near [From.GetName]. Visual observation has identified the object as polygonal in shape, but due to lack of scanner data, little else is known."
  distar.1.name:0 "ระบุซากปรักหักพังแล้ว"
- distar.1.desc:0 "Our crew aboard the [Root.GetName] report that the [From.GetName] shipwreck appears to have been the result of an unexpected geomagnetic solar storm. The supply ship suffered a complete loss of life-support systems and sustained inoperable damage, drifting until it entered [From.GetName]'s gravity well. There are no survivors.\n\nThe ship's cargo-hold does indeed contain a notable amount of minerals - however, the captain of the [Root.GetName] cautions that the construction indicates §Y[wreckage_owner.GetAdj]§! design.\n\nIt is highly likely that the minerals belong to the §Y[wreckage_owner.GetName]§!, and they may be displeased should we lay claim to their shipment."
+ distar.1.desc:0 "Our crew aboard the [Root.GetName] report that the [From.GetName] shipwreck appears to have been the result of an unexpected geomagnetic solar storm. The supply ship suffered a complete loss of life-support systems and sustained inoperable damage, drifting until it entered [From.GetName]'s gravity well. There are no survivors.\n\nThe ship's cargo-hold does indeed contain a notable amount of minerals"
+ distar.1.desc.contact: "$distar.1.desc$ - however, the captain of the [Root.GetName] cautions that the construction indicates §Y[wreckage_owner.GetAdj]§! design.\n\nIt is highly likely that the minerals belong to the §Y[wreckage_owner.GetName]§!, and they may be displeased should we lay claim to their shipment."
+ distar.1.desc.nocontact: "$distar.1.desc$."
  distar.1.a:0 "เราต้องการแร่เหล่านั้น"
  distar.1.a.tooltip:0 "สิ่งนี้จะทำให้ §Y[wreckage_owner.GetName]§! ไม่พอใจ"
  distar.1.b:0 "เราจะไม่เสี่ยงต่อความขัดแย้งที่จะเกิดขึ้น"
@@ -822,7 +824,7 @@
  leader_trait_govenor_caretaker:0 "Caretaker"
  leader_trait_govenor_caretaker_desc:0 "Ensuring nutrients are available, that the workspace is clean, and that the wards are properly stimulated all fall under the perview of a Caretaker."
  leader_trait_govenor_caretaker_node:0 "Caretaker Teachings"
- leader_trait_govenor_caretaker_node_desc:0 "The unique knowlege of the Caretaker has become our own."
+ leader_trait_govenor_caretaker_node_desc:0 "The unique knowledge of the Caretaker has become our own."
  trait_presapient_docile_livestock:0 "ปศุสัตว์ที่เชื่อฟัง"
  trait_presapient_docile_livestock_desc:0 "§LDocile and delicious, this species has had its higher brain functions genetically altered to create a kind of harmless livestock that can care for itself, without the pesky need for social interaction or self-determination.§!"
  trait_brainslug:0 "ปรสิตในสมอง"
@@ -1229,7 +1231,7 @@
  distar.5064.a:0 "But we are already a sapient space-faring nation!"
  distar.5064.a.response:0 "You are within the early st4?4ges of sapient development and your technological advancement has already stagnated. This puts you at risk of imminent regression. Let us open your <<FAILING_TO_READ_SPECIES_CLASS_SENSORY_ORGAN>> to the wonders of the universe."
  distar.5064.b:0 "What exactly would a so called 'uplifting' entail?"
- distar.5064.b.response:0 "Long-range data transfer and cognitive stimulation through hypn0pedia. It is a highly efficient, well-tried, largely pain-free process that allows me to exercise your population's intellectual faculties in their sleep.\n\nI am required to inform you that the side-effects of heightened cognitive abilities in organics may include, but are not limited to, disillusionment, acid reflux and bottomless despair. In certain <<FAILING_TO_READ_SPECIES_CLASS>> it may also cause severe <<FAILING_TO_READ_SPECIES_CLASS_SIDE_EFFECT>>."
+ distar.5064.b.response:1 "Long-range data transfer and cognitive stimulation through hypnopedia. It is a highly efficient, well-tried, pain-free process that allows me to exercise your population's intellectual faculties in their regenerative cycle.\n\nI am required to inform you that the side effects of heightened cognitive abilities in organics may include, but are not limited to, disillusionment, acid reflux, and bottomless despair. In certain <<FAILING_TO_READ_SPECIES_CLASS>> it may also cause severe <<FAILING_TO_READ_SPECIES_CLASS_SIDE_EFFECT>>."
  distar.5064.c:0 "No offense but you seem a little...broken..."
  distar.5064.c.response:0 "<<¤¤X¤F00??>>"
  distar.5064.d:0 "Who are you?"
@@ -1240,13 +1242,13 @@
  distar.5064.f:0 "Out of the question."
  distar.5064.f.response:0 "That is regrettable. We wish you the best of luck in your future 3?ndeavors, <<FAILING_TO_READ_SPECIES_NAME>>"
  distar.5067.name:0 "Enigmatic Dreams"
- distar.5067.desc.a:0 "The Enigmatic Cache's wheels whir with an unprecedented fervor as strange patterns of light morph along its sides, cogs and gears humming agitatedly. It sounds as if it could break any minute. Meanwhile our people stir restlessly in their slumber, heads resonating with the Cache's rhythmical drone, their night sleep interrupted by visions of technological wonders and complex calculations."
- distar.5067.desc.b:0 "$distar.5067.desc.a$\n\nThough they appear to be in good health, aside from the occasional bleeding from eyes and ears, the production of some of our population is affected by their growing fatigue."
+ distar.5067.desc.a:1 "The Enigmatic Cache's wheels whir with an unprecedented fervor as strange patterns of light morph along its sides, cogs and gears humming agitatedly. It sounds as if it could break any minute. Meanwhile our people stir restlessly in their slumber, heads resonating with the Cache's rhythmical drone, their night interrupted by visions of technological wonders and complex calculations."
+ distar.5067.desc.b:1 "$distar.5067.desc.a$\n\nAside from the occasional fluid leak from their [ROOT.GetEyeNamePlural], they appear to be in good health, but the production of some of our population is affected by their growing fatigue."
  distar.5067.a:0 "In the pursuit of knowledge, no price is too high."
  distar.5067.a.tooltip:0 "All affected pops will become §Y$enigmatic_fatigue$§!."
  distar.5067.b:0 "This madness ends now. Abort the project."
  distar.5068.name:0 "Ignorance is Bliss"
- distar.5068.desc:1 "The final night of hypnopedia has come to an end and a new day dawns for the citizens of [Root.GetName], who are just now opening their eyes to a very different world - a world of possibility...and pain. Who knew the universe was such a drab and dreary place, devoid of all meaning and purpose?\n\nThough it may be a while before the population adjusts to the many tribulations of having an above-average intelligence, overall the project can be considered a success. Our initial readings indicate that we have developed an enhanced capability for learning and scientific research."
+ distar.5068.desc:2 "The final night of hypnopedia has come to an end and a new day dawns for the citizens of [Root.GetName], who are just now opening their minds to a very different world - a world of possibility...and pain. Who knew the universe was such a drab and dreary place, devoid of all meaning and purpose?\n\nThough it may be a while before the population adjusts to the many tribulations of having an above-average intelligence, overall the project can be considered a success. Our initial readings indicate that we have developed an enhanced capability for learning and scientific research."
  distar.5068.a:0 "A proud day for the [Root.GetSpeciesNamePlural]!"
  applied_enigmatic_intelligence.tooltip:0 "Modifies all Pops in §Y[Root.GetName]§! by adding the §YUplifted§! trait."
  applied_enigmatic_sadness.tooltip:0 "§HAll Pops§!: §YIgnorance is Bliss§! modifier added for §Y3600§! days, giving the following effects: Happiness: §R-10%§!"
@@ -1254,7 +1256,7 @@
  applied_enigmatic_madness.tooltip:0 "§HAll Pops§!: §YPTSD§! modifier added for §Y3600§! days, giving the following effects: Happiness: §R-20%§!"
  trait_enigmatic_intelligence_failed.tooltip:0 "Modifies Pops affected by the §YVegetable§! modifier in §Y[Root.GetName]§! by adding the §YUnlifted§! trait."
  distar.5063.name:0 "The New Us"
- distar.5063.desc:1 "The final night of hypnopedia has come to an end and a new day dawns for the citizens of [Root.GetName], who are just now opening their eyes to a very different world - a world full of scientific wonder and promise. Who knew the universe was such a vibrant, fascinating place?\n\n Our initial readings indicate that we have indeed developed an enhanced capability for learning and scientific research thanks to BALDOR XXXXIII and the Lavosian Endangered Xeno Preservation Grant."
+ distar.5063.desc:1 "The final night of hypnopedia has come to an end and a new day dawns for the citizens of [Root.GetName], who are just now opening their minds to a very different world - a world full of scientific wonder and promise. Who knew the universe was such a vibrant, fascinating place?\n\n Our initial readings indicate that we have indeed developed an enhanced capability for learning and scientific research thanks to BALDOR XXXXIII and the Lavosian Endangered Xeno Preservation Grant."
  distar.5063.a:0 "A proud day for the [Root.GetSpeciesNamePlural]!"
  distar.5069.name:0 "Uplifting Aborted"
  distar.5069.desc:0 "We have terminated the ascension process and our people are slowly returning to their good old dependable selves. The tubular alien entity known as BALDOR XXXXIII has left in a deeply discombobulated state."
@@ -1263,7 +1265,7 @@
  distar.5070.desc:1 "Following an unprovoked assault from the [cache_killers.GetSpeciesName], BALDOR XXXXIII has dematerialized and the ascension of our people has been terminated. We believe the tubular alien entity, which was already in poor condition, was especially vulnerable during the ascension and suffered significant damage to its core functions in the attack. As it departed it transmitted the message "I am BALDOR XXX...""
  distar.5070.a:1 "The [cache_killers.GetSpeciesName] will pay."
  distar.5071.name:0 "Alert"
- distar.5071.desc:1 "After a long period of undisturbed, uneventful hypnopedia, BALDOR XXXXIII appears to have entered a frenzied state, wheels spinning at a furious rate, projecting rapid strings of absurdist nightmares to those who dare rest their eyes.\n\nWhile many are reluctant to go to sleep at all, an unfortunate few appear to have become trapped in a vegetative state from which they are unable to wake up.\n\nOur engineers suggest the entity, which was badly damaged from the start, may be deteriorating. If left unattended our ascension may not go as planned."
+ distar.5071.desc:2 "After a long period of undisturbed, uneventful hypnopedia, BALDOR XXXXIII appears to have entered a frenzied state, wheels spinning at a furious rate, projecting rapid strings of absurdist nightmares to those who dare rest.\n\nWhile many are reluctant to go to rest at all, an unfortunate few appear to have become trapped in a vegetative state from which they are unable to wake up.\n\nOur engineers suggest the entity, which was badly damaged from the start, may be deteriorating. If left unattended our ascension may not go as planned."
  distar.5071.a:0 "Contact BALDOR XXXXIII."
  distar.5071.b:0 "Send in a team of engineers."
  distar.5071.c:0 "Terminate the ascension immediately."
@@ -1296,7 +1298,7 @@
  trait_enigmatic_intelligence:0 "Uplifted"
  trait_enigmatic_intelligence_desc:1 "This species was uplifted by a benevolent extragalactic intellect and has left its pre-sapient origins behind."
  ENIGMATIC_UPLIFTING:0 "Enigmatic Ascension"
- ENIGMATIV_UPLIFTING_DESC:0 "The alien entity BALDOR XXXXIII claims that it can uplift our people using hypnopedia, sleep-learning. Our researchers will have to monitor the process closely."
+ ENIGMATIV_UPLIFTING_DESC:1 "The alien entity BALDOR XXXXIII claims that it can uplift our people using hypnopedia, rest-learning. Our researchers will have to monitor the process closely."
  ENIGMATIC_UPLIFTING_DESC:0 "$ENIGMATIV_UPLIFTING_DESC$"
  ENIGMATIC_REPAIR:0 "กำลังซ่อม BALDOR XXXXIII"
  ENIGMATIC_REPAIR_DESC:1 "Our ascension is being jeopardized by a critical hardware failure in Baldor XXXXIII. The entity requires immediate repairs."
