--- a/mod/thmod/localisation/english/first_contact_l_english.yml
+++ b/mod/thmod/localisation/english/first_contact_l_english.yml
@@ -1641,7 +1641,7 @@
  fircon.6030.desc:0 "Incredible news from [non_believers_planet.GetName]: someone really was hiding under the surface! Subterranean armies of a previously unknown species are pouring out of caves, and they're attacking the [non_believers_country.GetSpeciesNamePlural]. It's a full-scale invasion!"
  fircon.6030.a:0 "This feels familiar..."
  fircon.6031.name:0 "As Above, So Below"
- fircon.6031.desc:0 "After a bloody world war, the [non_believers_country.GetName] has been annihilated by the subterranean race living under [non_believers_planet.GetName]'s surface. The newly dominant species is aware of our presence, and in something of a mixed blessing, obviously does not believe we come from the center of their planet."
+ fircon.6031.desc:1 "After a vicious world war, the [non_believers_country.GetName] has been annihilated by the subterranean race living under [non_believers_planet.GetName]'s surface. The newly dominant species is aware of our presence, and in something of a mixed blessing, obviously does not believe we come from the center of their planet."
  fircon.6031.a:0 "Finally, reasonable neighbors."
  fircon.6032.name:0 "Sudden Eruption!"
  fircon.6032.desc.base:0 "The [non_believers_country.GetSpeciesNamePlural] were right to be afraid: while not home to any underground race, the molten core of their planet has proven dangerous enough."
@@ -1741,7 +1741,7 @@
  fircon.8045.b.tt:0 "One §Y[space_slavers_species.GetName]§! is resettled to §Y[event_target:space_slavers_capital.GetName]§!"
  fircon.8045.c:0 "If they want our slaves, there's a tax!"
  fircon.8050.name:0 "Enslaved"
- fircon.8050.desc:0 "We have received disturbing reports from the [preftl_slavers_country.GetName] [GetPreFTLUpperPlural]: in remote regions of the planet, several spacefaring merchants, mainly smugglers, have disappeared along with their ships. A discreet investigation revealed that they were pressed into work in the mines, far from prying eyes.\n\nIt is important to note that this was not done by the  [preftl_slavers_country.GetName] authorities, but rather a few local warlords and criminals, and that all of the abducted individuals were in violation of the treaties we signed with the [GetPreFTLUpperPlural]."
+ fircon.8050.desc:1 "We have received disturbing reports from the [preftl_slavers_country.GetName] [GetPreFTLUpperPlural]: in remote regions of the planet, several spacefaring merchants, mainly smugglers, have disappeared along with their ships. A discreet investigation revealed that they were pressed into work in the mines, far from view.\n\nIt is important to note that this was not done by the  [preftl_slavers_country.GetName] authorities, but rather a few local warlords and criminals, and that all of the abducted individuals were in violation of the treaties we signed with the [GetPreFTLUpperPlural]."
  fircon.8050.a:0 "They got what they deserved."
  fircon.8050.b:0 "Unacceptable. Secure their freedom."
  fircon.8050.c:0 "Launch a punitive strike."
@@ -1928,6 +1928,9 @@
  civic_machine_exploration_protocol:0 "โปรโตคอลการสำรวจ"
  civic_machine_exploration_protocol_desc:0 "The foundation of this Machine Intelligence's central programming is the drive to catalog exoplanetary life. In pursuit of this directive, it has dedicated much of its resources to crafting a small fleet of vessels capable of limited subspace travel."
  civic_machine_exploration_protocol_effects:1 "$eager_explorers_base_effect$\nGain §G50%§! more Insight progress from observing pre-FTL Civilizations.\nGain £unity£§HUnity§! every time you finish establishing first contact."
+ civic_tooltip_not_eager_explorers: "ไม่มีพลเมือง ['concept_eager_explorers_civics']"
+ concept_eager_explorers_civics: "Eager Explorers"
+ concept_eager_explorers_civics_desc: "$concept_eager_explorers_civics$ Civics consist of \n- ['civic:civic_eager_explorers']$NEW_LINE$- ['civic:civic_privatized_exploration']$NEW_LINE$- ['civic:civic_hive_stargazers']$NEW_LINE$- ['civic:civic_machine_exploration_protocol']"
  hyper_drive_plural:0 "hyper drives"
  subspace_drive_plural:0 "ระบบขับเคลื่อนในทางลัดอวกาศ"
  hyper_drive: "hyper drive"
