--- a/mod/thmod/localisation/english/job_concepts_l_english.yml
+++ b/mod/thmod/localisation/english/job_concepts_l_english.yml
@@ -5,6 +5,22 @@
  concept_farmer_desc: "$job_farmer_plural$ produce $i_food$.\n\n§L$job_farmer_desc$§!"
  concept_miner: "$job_miner_plural$"
  concept_miner_desc: "$job_miner_plural$ produce $i_minerals$.\n\n§L$job_miner_desc$§!"
+ concept_researcher: "$job_researcher_plural$"
+ concept_researcher_desc: "$job_researcher_plural$ turn $i_consumer_goods$ into $i_research$\n\n§L$job_researcher_desc$§!"
+ concept_foundry: "$job_foundry_plural$"
+ concept_foundry_desc: "$job_foundry_plural$ turn $i_minerals$ into $i_alloys$.\n\n§L$job_foundry_desc$§!"
+ concept_artisan: "$job_artisan_plural$"
+ concept_artisan_desc: "$job_artisan_plural$ turn $i_minerals$ into $i_consumer_goods$.\n\n§L$job_artisan_desc$§!"
+ concept_soldier: "$job_soldier_plural$"
+ concept_soldier_desc: "$job_soldier_plural$ produce $i_naval_capacity$ and $i_defense_armies$.\n\n§L$job_soldier_desc$§!"
+ concept_priest: "$job_priest_plural$"
+ concept_priest_desc: "$job_priest_plural$ turn $i_consumer_goods$ into $i_unity$ and $i_amenities$.\n\n§L$job_priest_desc$§!"
+ concept_high_priest: "$job_high_priest_plural$"
+ concept_high_priest_desc: "$job_high_priest_plural$ turn $i_consumer_goods$ into $i_unity$ and $i_amenities$.\n\n§L$job_high_priest_desc$§!"
+ concept_haruspex: "$job_haruspex_plural$"
+ concept_haruspex_desc: "$job_haruspex_plural$ turn $i_consumer_goods$ into $i_engineering$ and $i_unity$.\n\n§LEvangelical mechanics and surgeons of the divine, rendering unworthy flesh and replacing it with holy cybernetics.§!"
+ concept_technophant: "$job_technophant_plural$"
+ concept_technophant_desc: "$job_technophant_plural$ turn $i_consumer_goods$ into $i_engineering$ and $i_unity$.\n\n§LExalted interpreters of divine wetware. They guide the people toward a perfect fusion of flesh and machine.§!"
  concept_roboticist: "$job_roboticist_plural$"
  concept_roboticist_desc: "$job_roboticist_plural$ เปลี่ยน $i_alloys$ เป็น £pop£ §Iประชากรหุ่นยนต์§! ใหม่\n\n§L$job_roboticist_desc$§!"
  concept_archaeoengineers: "$job_archaeoengineers_plural$"
