--- a/mod/thmod/localisation/english/leviathans_l_english.yml
+++ b/mod/thmod/localisation/english/leviathans_l_english.yml
@@ -919,6 +919,6 @@
  councilor_curator_archivist_desc: "An archivist from the $NAME_Curator_Order$ serves on the council, sharing the accumulated knowledge of eons."
  councilor_curator_archivist_unlock_title: "§HCouncil Position from the $NAME_Curator_Order$§!"
  councilor_curator_archivist_conditional_tooltip: "ผู้นำมีคุณลักษณะ §Y$leader_trait_curator$§!"
- unlocks_curator_council_position: "\n§Eปลดล็อกตำแหน่งในสภา:§!\n§H$t$$councilor_curator_archivist$§!\n$tt$$COUNCIL_POSITION_MODIFIER_BASE$\n$ttt$$MOD_ASSIST_RESEARCH_MULT$: §G+5%§!\n$ttt$$mod_planet_researchers_upkeep_mult$ §G-2%§!\n$COUNCIL_POSITION_AVAILABLE_FOR$$t$$scientist_with_icon$\n\n$COUNCIL_POSITION_REQUIREMENTS$$councilor_curator_archivist_conditional_tooltip$"
+ unlocks_curator_council_position: "\n§EAllows the unlocking of Council Position:§!\n§H$t$$councilor_curator_archivist$§!\n$tt$$COUNCIL_POSITION_MODIFIER_BASE$\n$ttt$$mod_planet_researchers_produces_mult$: §G+2%§!\n$ttt$$mod_planet_researchers_upkeep_mult$: §G-2%§!\n$COUNCIL_POSITION_AVAILABLE_FOR$$t$$scientist_with_icon$\n\n$COUNCIL_POSITION_REQUIREMENTS$$councilor_curator_archivist_conditional_tooltip$"
  curator_archivist_desc: "$leader_trait_curator_desc$"
  curator_archivist_catch_phrase: "§L"Together we shall uncover secrets long forgotten."§!"
