--- a/mod/thmod/localisation/english/nemesis_crisis_l_english.yml
+++ b/mod/thmod/localisation/english/nemesis_crisis_l_english.yml
@@ -1,5 +1,5 @@
 ﻿l_english:
- ap_become_the_crisis:0 "เป็นไครซิส"
+ ap_become_the_crisis:1 "Galactic Nemesis"
  ap_become_the_crisis_desc:1 "ผลงานที่ยิ่งใหญ่ล้วนแต่ต้องการความเสียสละ พวกอื่นๆในกาแล็กซีอาจไม่เข้าใจ แต่พวกเขาจะเชื่อฟังและปฏิบัติตาม"
  menace_name:1 "$menace$:"
  crisis_path_destruction_name:0 "Path of Destruction"
@@ -80,36 +80,38 @@
  crisis_perks_deception_shadowplay_unlock:0 "Complete §H10 Operations§! in order to unlock this $crisis_perk$."
  crisis_perks_deception_shadowplay_passive:0 "Espionage actions are +20% faster, and have a -20% cost."
  crisis_perks_deception_shadowplay_active:0 "Gain §G+20 Intel§! on other empires."
- MENACE_VALUE:1 "£menace£ $VAL|0$"
- GAINING_MENACE:0 "Complete Menace Objectives to gain more Menace."
- MENACE_DESC:1 "Menace is a measure of your resonance with the calamitous energies of the Shroud."
+ menace_value: "£menace£ $VAL|0$"
+ menace_gaining: "Complete §HCrisis Objectives§! to gain more §YMenace§!."
+ menace_desc: "Menace is a measure of our resonance with the calamitous energies of the Shroud."
+ menace_crisis_objective: "Crisis Objectives"
+ menace_crisis_objective_gained: "Menace gained"
+ menace_crisis_objective_reward: "$REWARD$"
+ menace_crisis_objective_progress: "We have gained £menace£ $AMOUNT$ from this Crisis Objective."
+ menace_crisis_level_locked: "Required to unlock this level:\n"
+ menace_crisis_level_unlocked: "At $LEVEL$, you get a Special Project and the rewards:\n"
+ menace_crisis_level_desc: "To advance through the Crisis levels, complete Crisis Objectives and research the Crisis Special Projects in the Situation Log"
+ menace_crisis_level_unlock: "Has £menace£ §Y$CURRENCY$§! Menace"
+ menace_current_value: "Current Value: §Y$VALUE|0$§!"
+ menace_crisis_description_title: "Galactic Nemesis"
+ menace_crisis_description_intro: "Those in the galactic community who chart the arc of history have long predicted a coming §RCrisis§! - an existential threat to all sapient life which would require unprecedented unity of purpose, and sacrifice, to overcome. If it can be overcome at all.\n\nPopular predictions as to the nature of this crisis have been as fanciful as the invasion of an extragalactic glutton, or the galaxy's machine intelligences rising up in petty rebellion, or a war of succession spilling over from another plane of existence, but...\n\nIt is now clear that it was always going to be §Rus§!."
+ menace_crisis_description: "$menace_crisis_description_intro$\n\nOur actions have echoes in another dimension, one of limitless energy. We need only discover how to harness this power in order to bring the galaxy to heel."
+ menace_crisis_howto_title: "Menace & Engine"
+ menace_crisis_howto: "Pursuing §HCrisis Objectives§! generates £menace£ §HMenace§!, unlocking our destructive potential in order to complete the Aetherophasic Engine Megastructure and bring about a new age for the galaxy."
  CRISIS_TAB:0 "ไครซิส"
- CRISIS_OBJECTIVES:1 "เป้าหมายในการคุกคาม"
- CRISIS_OBJECTIVE_GAINED:0 "ค่าความอันตรายที่ได้รับ"
- CRISIS_OBJECTIVE_REWARD:1 "$REWARD$"
- CRISIS_OBJECTIVE_PROGRESS:1 "We have gained £menace£ $AMOUNT$ from this Menace Objective."
+ CRISIS_TAB_GO_TO: "Click here to go to the Crisis Tab"
  CRISIS_LEVEL_PROGRESS:0 "$CURRENT|0$/$REQUIRED$"
  UNLOCKED:1 "§GUnlocked§!"
- CRISIS_LEVEL_LOCKED:0 "Required to unlock this level:\n"
- CRISIS_LEVEL_UNLOCKED:1 "At $LEVEL$, you get a Special Project and the rewards:\n"
- CRISIS_LEVELS_DESC:1 "To advance through the Crisis levels, complete Menace Objectives and research the Crisis Special Projects in the Situation Log"
- CRISIS_LEVEL_UNLOCK_MENACE:1 "Has £menace£ §Y$MENACE$§! Menace"
- MENACE_CURRENT_VALUE:0 "Current Value: §Y$VALUE|0$§!"
  PERK:1 "§H$crisis_perk$§! - "
- crisis_level_1:0 "ภัยอันตราย"
- crisis_level_2:0 "ภัยคุกคาม"
- crisis_level_3:0 "ภัยหายนะ"
- crisis_level_4:0 "กาแล็กติกเนเมซิส"
- crisis_level_5:0 "ภัยคุกคามความอยู่รอด"
+ crisis_level_1:0 "§UConcern§!"
+ crisis_level_2:0 "§URisk§!"
+ crisis_level_3:0 "§UDanger§!"
+ crisis_level_4:0 "§UCalamity§!"
+ crisis_level_5:0 "§UExistential Threat§!"
  crisis_level_1_desc:0 "ไครซิส เลเวล 1"
  crisis_level_2_desc:0 "ไครซิส เลเวล 2"
  crisis_level_3_desc:0 "ไครซิส เลเวล 3"
  crisis_level_4_desc:0 "ไครซิส เลเวล 4"
  crisis_level_5_desc:0 "ไครซิส เลเวล 5"
- CRISIS_DESCRIPTION_TITLE:1 "จักรวรรดิไครซิส"
- CRISIS_DESCRIPTION:1 "Those in the galactic community who would chart the long arc of history into the future have long theorized of a coming §RCrisis§!. An existential threat to all sapient life which would require unprecedented unity of purpose, and sacrifice, to overcome. If it can, indeed, be overcome at all.\n\nPopular predictions as to the nature of this crisis were as fanciful as the invasion of an extragalactic glutton, or the galaxy's machine intelligences rising up in petty rebellion, or a war of succession spilling over from another plane of existence, but...\n\nIt is now clear that it was always going to be §Ryou§!."
- CRISIS_HOWTO_TITLE:1 "Menace & Engine"
- CRISIS_HOWTO:1 "Pursuing §HMenace Objectives§! as the Crisis generates £menace£ §YMenace§!, unlocking the destructive potential of your Empire in your quest to complete the Aetherophasic Engine Megastructure and remake the galaxy in your own image."
  crisis_level_2_req_tooltip:0 "£trigger_no£  Has completed the §Yfirst§! §H$become_the_crisis_chain$§! Special Project"
  crisis_level_3_req_tooltip:0 "£trigger_no£  Has completed the §Ysecond§! §H$become_the_crisis_chain$§! Special Project"
  crisis_level_4_req_tooltip:0 "£trigger_no£  Has completed the §Ythird§! §H$become_the_crisis_chain$§! Special Project"
@@ -123,7 +125,7 @@
  become_the_crisis_chain_desc:0 "We balance over the chasm of a bloody future as the gravity of destiny claws at us.\n\nAs we gaze into the abyss, we see only ourselves staring back."
  crisis_level_reached:0 "Crisis Level potential"
  casus_belli_cb_path_destruction:0 "Destruction"
- war_goal_wg_path_destruction:0 "เส้นทางแห่งเลือด"
+ war_goal_wg_path_destruction:1 "Path of Destruction"
  war_goal_wg_path_destruction_desc:0 "Set forth to annihilate and cause havoc of excessive proportions."
  MENACE_PERK_NOT_FOUND:0 "$COUNTRY|Y$ doesn't have the Menace Perk: $PERK|Y$"
  MENACE_PERK_ALREADY_ACTIVE:0 "Menace Perk $PERK|Y$ is already active for $COUNTRY|Y$"
@@ -136,7 +138,7 @@
  TRADITIONS_TAB_SHORT:0 "วัฒนธรรมและการยกระดับ"
  RELICS_TAB_SHORT:0 "วัตถุโบราณ"
  CRISIS_TAB_SHORT:0 "ไครซิส"
- CRISIS_TAB_DISABLED:1 "ใช้ได้เฉพาะ เมื่อมีการยกระดับ '$TRAD|Y$' เท่านั้น"
+ CRISIS_TAB_DISABLED:1 "Only available with $TRAD|Y$ or §Y$ap_cosmogenesis$§! Ascension Perk"
  CRISIS_TAB_DESC:2 ""
  new_crisis_perks_tt:0 "\n§GNew Crisis Perks have been unlocked§!"
  can_advance_crisis_progression:0 "The next level of our §YCrisis Progression§! has been unlocked"
