--- a/mod/thmod/localisation/english/paragon_l_english.yml
+++ b/mod/thmod/localisation/english/paragon_l_english.yml
@@ -74,8 +74,8 @@
  paragon.31.desc:0 "§HWe fulfilled our end of the bargain with the Beholder, delivering the energy as requested. Upon receipt of the power, the Monolith began emitting high-frequency vibrations. It then began shaking, and the ground surrounding it crumbled, as the Monolith rose, revealing itself to be at least two times larger than even our most outlandish estimates.\n\nA huge octahedral structure, the Monolith was suspended in the air as dirt and dust fell to the ground. The inhabitants of the planet screeched in panic as it took to the skies, climbing high into the atmosphere of [beholder_planet.GetName].\n\nIt is now clear that the Murmuring Monolith is a colossal vessel, capable of spaceflight. It currently orbits [beholder_planet.GetName].§!"
  paragon.1.a:0 "To what end do you seek energy?"
  paragon.1.a.response:0 "§HAfter a long silence, static begins to fill the transmission, steadily increasing until those listening are overcome with a myriad of emotions, from debilitating regrets to compelling desires. Too much to filter through, but for one thing that pierces through the noise:§!\n\nTo observe."
- paragon.1.b:0 "What can you do for our civilization?"
- paragon.1.b.response:0 "§HA string of incoherent, whispering voices echoes forth.§!\n\nSecrets... laid bare. By the potential of... the path... unlocked. The Shroud ... begins. We offer welcome... Let us... your eyes... guide... there.\n\n§HAlthough the patchy message is open to interpretation, there is little doubt that psionic energy and the Shroud are involved.§!"
+ paragon.1.b:1 "What can you do for our civilization?"
+ paragon.1.b.response:0 "§HA string of incoherent, whispering voices echoes forth.§!\n\nSecrets... laid bare. By the potential of... the path... unlocked. The Shroud ... begins. We offer welcome... Let us... use your... guide... there.\n\n§HAlthough the patchy message is open to interpretation, there is little doubt that psionic energy and the Shroud are involved.§!"
  paragon.1.c:0 "What are you?"
  paragon.1.c.response:0 "§HWith surprising clarity, a single voice swells:§!\n\nFleeting, and eternal. Nothing, and everything... Your language is ineffective. We are akin to 'purpose.' For now, any further definition lies beyond your grasp. The Shroud is vast and there is much to learn."
  paragon_beholder_joins:1 "§Y$NAME_The_Beholder$§! เข้าร่วมจักรวรรดิของคุณในฐานะ §Hผู้นำ§!"
@@ -703,6 +703,9 @@
  councilor_anglers:0 "รัฐมนตรีกระทรวงทะเล"
  councilor_anglers_female:0 "$councilor_anglers$"
  councilor_anglers_desc:0 "The $TITLE$ is in charge of sea conservation and harvesting."
+ councilor_machine_anglers: "$councilor_anglers$"
+ councilor_machine_anglers_female: "$councilor_anglers$"
+ councilor_machine_anglers_desc: "$councilor_anglers_desc$"
  councilor_aristocratic_elite:0 "เสนาบดี"
  councilor_aristocratic_elite_female:0 "เสนาบดี"
  councilor_aristocratic_elite_desc:0 "The $TITLE$ upholds the status and comforts of the ruling class."
@@ -732,6 +735,9 @@
  councilor_corporate_anglers_female:0 "$councilor_corporate_anglers$"
  councilor_corporate_anglers_desc:1 "The $TITLE$ is responsible for seaborn productivity."
  councilor_corporate_anglers_custom_modifier_desc:1 "- £trade_value£ มูลค่าการค้า จาก £job_angler£ $job_angler_plural$: §G+$@councilor_corporate_anglers_angler_trade_value_bonus$§!\n- £trade_value£ มูลค่าการค้า จาก £job_pearl_diver£ $job_pearl_diver_plural$: §G+$@councilor_corporate_anglers_pearl_diver_trade_value_bonus$§!"
+ councilor_corporate_machine_anglers: "$councilor_corporate_anglers$"
+ councilor_corporate_machine_anglers_female: "$councilor_corporate_anglers$"
+ councilor_corporate_machine_anglers_desc: "$councilor_corporate_anglers_desc$"
  councilor_corporate_ascensionists:0 "หัวหน้าเจ้าหน้าที่งานการยกระดับ"
  councilor_corporate_ascensionists_female:0 "$councilor_corporate_ascensionists$"
  councilor_corporate_ascensionists_desc:0 "$councilor_ascensionists_desc$"
@@ -900,7 +906,7 @@
  councilor_reanimated_armies_desc:0 "The $TITLE$ guards the secret arts and ordains new necromancers."
  councilor_reanimated_armies_custom_modifier_desc:2 "- £unity£ เอกภาพ จาก £job_necromancer£ $job_necromancer_plural$: §G+$@councilor_reanimated_armies_necromancer_unity|1$§!"
  councilor_relentless_industrialists:0 "หัวหน้าเจ้าหน้าที่การสกัด"
- councilor_relentless_industrialists_female:0 "$councilor_relentless_industrialists$"
+ councilor_relentless_industrialists_female:0 "Executive Extraction Officer"
  councilor_relentless_industrialists_desc:1 "The $TITLE$ will exploit anyone and anything to ensure industrial expansion."
  councilor_ruthless_competition:0 "เสนาธิการ"
  councilor_ruthless_competition_female:0 "$councilor_ruthless_competition$"
@@ -916,7 +922,7 @@
  councilor_shared_burden_desc:0 "The $TITLE$ makes sure any grievances are settled promptly."
  councilor_slaver_guilds:1 "ผู้พิพากษาแรงงาน"
  councilor_slaver_guilds_female:0 "$councilor_slaver_guilds$"
- councilor_slaver_guilds_desc:0 "The $TITLE$ oversees the treatment of slaves, to prevent unnecessary bloodshed."
+ councilor_slaver_guilds_desc:1 "The $TITLE$ oversees the treatment of slaves, to prevent unnecessary violence."
  councilor_technocracy:0 "ผู้อำนวยการวิทยาศาสตร์อาวุโส"
  councilor_technocracy_female:0 "$councilor_technocracy$"
  councilor_technocracy_desc:0 "The $TITLE$ ensures fundamental research is promoted and shared between departments."
@@ -1010,6 +1016,10 @@
  council_agenda_agenda_idle_desc:0 "เราไม่โฟกัสปัญหาที่เฉพาะเจาะจง เราจัดการกับปัญหาที่เล็กกว่า นอกเหนือจากนั้นค่อยทำทีหลัง"
  council_agenda_agenda_reorganize_council_name:0 "ปรับคณะรัฐมนตรีใหม่"
  council_agenda_agenda_reorganize_council_desc:0 "เนื่องจากมีการเปลี่ยนแปลงความสนใจของรัฐบาล เราควรจัดสภาใหม่เพื่อโฟกัสเรื่องอื่นๆ"
+ council_agenda_agenda_augmentation_product_launch_name:0 "Augmentation Product Launch"
+ council_agenda_agenda_augmentation_product_launch_desc:0 "Major cyber implant-based product launch preceded by a period of unprofitable conceptualization, development and testing."
+ agenda_augmentation_product_launch_finish:0 "$council_agenda_agenda_augmentation_product_launch_name$ $agenda_ref$"
+ agenda_augmentation_product_launch_finish_desc:0 "$council_agenda_agenda_augmentation_product_launch_desc$"
  council_agenda_agenda_we_come_in_peace_name:0 "เรามาอย่างสันติ"
  council_agenda_agenda_we_come_in_peace_desc:0 "ตรวจสอบให้แน่ใจว่าการไม่รุกรานมีอยู่ในสังคมและความสัมพันธ์ทางการทูตของเรา"
  council_agenda_agenda_we_come_in_peace_effect_per_country:1 "ทุกจักรวรรดิที่ไม่ฆ่าล้างเผ่าพันธุ์: §G+$@agenda_we_come_in_peace_trust|0$§! $opinion_trust$\n"
@@ -1082,6 +1092,11 @@
  council_agenda_agenda_open_markets_desc:0 "เรามุ่งมั่นที่จะเพิ่มผลประโยชน์สูงสุดให้กับทุกฝ่ายที่เกี่ยวข้องในสนธิสัญญาทางการค้าของเรา"
  agenda_open_markets_finish:0 "$council_agenda_agenda_open_markets_name$ $agenda_ref$"
  agenda_open_markets_finish_desc:0 "$council_agenda_agenda_open_markets_desc$"
+ council_agenda_agenda_open_markets_criminal_heritage_name: "$council_agenda_agenda_open_markets_name$"
+ council_agenda_agenda_open_markets_criminal_heritage_desc: "We are entirely committed to maximizing the benefits for all of our Clientele."
+ agenda_open_markets_criminal_heritage_finish: "$council_agenda_agenda_open_markets_criminal_heritage_name$ $agenda_ref$"
+ agenda_open_markets_criminal_heritage_finish_desc: "$council_agenda_agenda_open_markets_criminal_heritage_desc$"
+ mod_branch_office_holding_crime_mult: "Crime from Branch Office Holdings"
  council_agenda_agenda_favored_society_name:0 "สังคมที่ได้รับการสนับสนุน"
  council_agenda_agenda_favored_society_desc:1 "เราเลือกที่จะจ่ายเป็นพิเศษให้กับพลเมืองที่อาศัยและทำงานที่ดาวศูนย์กลางจักรวรรดิของเรา (ดาวเมืองหลวง)"
  agenda_favored_society_finish:0 "$council_agenda_agenda_favored_society_name$ $agenda_ref$"
